--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-29 [人权观察敦促联合国及全球持续要求中国政府停止在新疆的反人类罪行](/articles/voa/1013006.md)
+
 8-29 [“北京自己人”、澳门前终审法院院长岑浩辉宣布“参选”澳门特首](/articles/voa/1013007.md)
 
 8-29 [乌克兰无人机击中俄油库，并远程袭击1500公里外目标](/articles/voa/1013008.md)
@@ -598,6 +600,4 @@
 8-16 [TikTok称美司法部错误陈述其与中国政府关系](/articles/voa/1013304.md)
 
 8-16 [台湾又发生一次强震，暂未听说造成损害](/articles/voa/1013305.md)
-
-8-16 [前澳大利亚总理称台湾是“中国的不动产” 佩洛西严厉批评：“愚蠢、荒谬”](/articles/voa/1013306.md)
 
