--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-29 [英国政府搁置《高等教育(言论自由)法》被起诉 原告认为中国利益是关键因素](/articles/voa/1013005.md)
+
 8-29 [人权观察敦促联合国及全球持续要求中国政府停止在新疆的反人类罪行](/articles/voa/1013006.md)
 
 8-29 [“北京自己人”、澳门前终审法院院长岑浩辉宣布“参选”澳门特首](/articles/voa/1013007.md)
@@ -598,6 +600,4 @@
 8-16 [中国将对入境人员和货物进行猴痘病毒筛检](/articles/voa/1013303.md)
 
 8-16 [TikTok称美司法部错误陈述其与中国政府关系](/articles/voa/1013304.md)
-
-8-16 [台湾又发生一次强震，暂未听说造成损害](/articles/voa/1013305.md)
 
