--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-29 [沙利文会晤中共军委副主席张又侠 白宫称将安排拜登与习近平通话](/articles/voa/1012990.md)
+
 8-29 [研究显示中国去年对非洲贷款七年来首次上升](/articles/voa/1012991.md)
 
 8-29 [先“诋毁”毛泽东、再侮辱中国人智商，中国国产AI机器人管不住了？](/articles/voa/1012992.md)
@@ -598,6 +600,4 @@
 8-17 [中共文宣系统一边贪腐荒淫 一边“杀人无形”–“为习近平讲故事的人把事情搞砸了”](/articles/voa/1013288.md)
 
 8-17 [中国企图干预美国大选 推特AI“五毛”自露马脚 澳安全网络公司抓到证据](/articles/voa/1013289.md)
-
-8-17 [中国芯片设备制造商中微公司起诉美国国防部](/articles/voa/1013290.md)
 
