--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+8-29 [非洲债务危机或对全球产生“灾难性影响”](/articles/nyt/1042431.md)
+
 8-29 [沙利文与王毅会谈11小时，白宫称拜登将与习近平通话](/articles/nyt/1042432.md)
 
 8-29 [科技公司高管该为平台上的内容负责吗？](/articles/nyt/1042433.md)
@@ -598,6 +600,4 @@
 5-28 [赖清德就职后首个美国国会代表团访问台湾](/articles/nyt/1042729.md)
 
 5-28 [中国是如何在产业政策上遥遥领先于世界的](/articles/nyt/1042730.md)
-
-5-28 [中日韩重启三方会谈：聚焦贸易合作，避谈区域安全问题](/articles/nyt/1042731.md)
 
