--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-29 [Telegram首席执行官杜罗夫遭法国起诉](/articles/voa/1012987.md)
+
 8-29 [科学家称气候变化加剧了台风“格美”引发的致命灾害](/articles/voa/1012988.md)
 
 8-29 [巴黎残奥会在希望与包容的光芒中揭幕](/articles/voa/1012989.md)
@@ -598,6 +600,4 @@
 8-17 [乌克兰：乌军在库尔斯克地区继续推进并“巩固阵地”](/articles/voa/1013285.md)
 
 8-17 [原侵华日军731部队成员哈尔滨谢罪 中日反应迥异](/articles/voa/1013286.md)
-
-8-17 [加沙停火调解方宣布新的“过渡提案”](/articles/voa/1013287.md)
 
