--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-29 [一座独立屋｜最后一轮暴涨](/articles/cdt/337568.md)
+
+8-29 [【404文库】弱信号｜从住房养老金到砸锅卖铁，政策语言应该规范化](/articles/cdt/337570.md)
+
 8-29 [经济观察报｜地方政府要到砸锅卖铁的地步？](/articles/cdt/337575.md)
 
 8-29 [【404文库】古老板的老巢｜砸锅卖铁，干得好！应该全国推广](/articles/cdt/337577.md)
@@ -596,8 +600,4 @@
 7-23 [【CDTV】中国人民大学女博士生实名公开举报其导师王贵元性骚扰](/articles/cdt/338647.md)
 
 7-23 [玖奌杂货铺｜不向恶妥协，敢于站出来的人，都是值得尊敬的](/articles/cdt/338653.md)
-
-7-22 [南风窗｜陕西塌桥，“亲人的定位一直在桥底下”](/articles/cdt/338661.md)
-
-7-22 [四环青年｜人大女博士公开举报导师性骚扰，维权本不该这么难](/articles/cdt/338663.md)
 
