--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+8-29 [习近平会见沙利文，吁美中相向而行 官媒盼美“读懂中国”](/articles/voa/1012983.md)
+
+8-29 [习近平会见沙利文，双方强调愿意继续努力稳定双边关系](/articles/voa/1012984.md)
+
+8-29 [IBM将关闭中国研发部门、裁员逾千人 分析:美中脱钩最新征兆](/articles/voa/1012985.md)
+
 8-29 [香港法院判决前《立场新闻》两位编辑串谋发布煽动刊物罪名成立](/articles/voa/1012986.md)
 
 8-29 [Telegram首席执行官杜罗夫遭法国起诉](/articles/voa/1012987.md)
@@ -594,10 +600,4 @@
 8-17 [菲律宾：中国“非常戏剧性”地对美在菲部署导弹系统表示了震惊](/articles/voa/1013281.md)
 
 8-17 [林培瑞: 大选后美国会怎么看中共？](/articles/voa/1013282.md)
-
-8-17 [中国大热游戏《黑神话：悟空》发售前夕讨论区遭反北京帖文洗版](/articles/voa/1013283.md)
-
-8-17 [宝马因高田气囊充气机缺陷在中国召回130万辆汽车](/articles/voa/1013284.md)
-
-8-17 [乌克兰：乌军在库尔斯克地区继续推进并“巩固阵地”](/articles/voa/1013285.md)
 
