--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+8-29 [“费用可以五五分”——澳总理与美官员闲聊意外被拍](/articles/dw/1024442.md)
+
 8-29 [立場新聞案罪成，恐影響香港新聞自由？](/articles/dw/1024443.md)
 
 8-29 [谜团即将解开?专家称已定位MH370残骸](/articles/dw/1024444.md)
@@ -598,6 +600,4 @@
 7-30 [美国向菲律宾提供5亿美元军援](/articles/dw/1024740.md)
 
 7-30 [德系电动车完胜中国品牌 实事求是?](/articles/dw/1024741.md)
-
-7-30 [普京警告美在德部署导弹 德国政府硬气回应](/articles/dw/1024742.md)
 
