--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-30 [路透：十几年来中国从美国政府资助项目中获得一千多项专利](/articles/voa/1012975.md)
+
 8-30 [太平洋岛国论坛中美争锋，新西兰抛弃中国能走多远？](/articles/voa/1012976.md)
 
 8-30 [美国将加强与太平洋岛国合作，阻止中国犯罪团伙走私毒品](/articles/voa/1012977.md)
@@ -598,6 +600,4 @@
 8-17 [逾千万毕业生涌入求职市场 中国7月青年失业率攀升至17.1%](/articles/voa/1013273.md)
 
 8-17 [伏季休渔结束 一艘中国渔船金门外海遭撞沉没](/articles/voa/1013274.md)
-
-8-17 [哈里斯发表经济政策演说 提议减税、降物价及建平价宅](/articles/voa/1013275.md)
 
