--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+8-30 [美国陆军：阿灵顿公墓员工被特朗普团队工作人员“突然推搡”](/articles/voa/1012968.md)
+
+8-30 [俄罗斯警告法国：不要把对Telegram首席执行官的指控变成“政治迫害”](/articles/voa/1012969.md)
+
+8-30 [沙利文北京行落幕，称美一中政策指引对台军售有助维持台海和平 专家解读美台对中红线](/articles/voa/1012970.md)
+
 8-30 [面对中美欧三方角力 瑞士重审对华关系](/articles/voa/1012971.md)
 
 8-30 [美国会众议院两党代表团访问日本 讨论合作应对中国威胁](/articles/voa/1012972.md)
@@ -594,10 +600,4 @@
 8-18 [香港开办国家安全展览 前示威者直斥歪曲历史](/articles/voa/1013266.md)
 
 8-18 [庇护申请暂停后，美国南部边界非法入境者被捕人数大幅度下降](/articles/voa/1013267.md)
-
-8-17 [莫斯科称乌军用西方武器炸毁了库尔斯克州一座大桥](/articles/voa/1013268.md)
-
-8-17 [专访白夏：从毛泽东到习近平, 中共强人的政治逻辑](/articles/voa/1013269.md)
-
-8-17 [前苏联退役航母明斯克号在南通起火，是否完全报废引人关注](/articles/voa/1013270.md)
 
