--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-30 [萝严肃｜讲笑话的女人不要命](/articles/cdt/337556.md)
+
+8-30 [【404文库】刘晓博说财经Pro｜砸锅卖铁！这些地方，怎么了](/articles/cdt/337563.md)
+
 8-30 [日新说Copernicium｜（被屏蔽的老文重发）在韩国，女性们正在为结束数字性犯罪而斗争](/articles/cdt/337564.md)
 
 8-30 [每日一语 2024.8.29](/articles/cdt/337566.md)
@@ -596,8 +600,4 @@
 7-23 [第一财经｜中央研究开征“地方附加税”，理论收入规模近万亿](/articles/cdt/338624.md)
 
 7-23 [【404文库】川江物语｜前外交部长秦刚二三事](/articles/cdt/338634.md)
-
-7-23 [龙眠草堂｜由28勇士说苏联新闻造假](/articles/cdt/338637.md)
-
-7-23 [每日一语 2024.7.22](/articles/cdt/338645.md)
 
