--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+8-30 [中国科技公司能否在硅谷找到立足之地？](/articles/nyt/1042428.md)
+
 8-30 [沙利文与习近平、张又侠会面，推动中美军事沟通](/articles/nyt/1042429.md)
 
 8-29 [前白宫顾问新书爆料特朗普被习近平“当猴耍”](/articles/nyt/1042430.md)
@@ -598,6 +600,4 @@
 5-29 [立法院打架、数万人街头抗议：台湾政治怎么了？](/articles/nyt/1042726.md)
 
 5-28 [“全民居者有其屋”：新加坡如何建立公共住房系统](/articles/nyt/1042727.md)
-
-5-28 [为什么拜登不想让美国人购买廉价中国电动汽车](/articles/nyt/1042728.md)
 
