--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+8-30 [《立场新闻》编辑被判“煽动”罪成，香港新闻自由再受打击](/articles/nyt/1042427.md)
+
 8-30 [中国科技公司能否在硅谷找到立足之地？](/articles/nyt/1042428.md)
 
 8-30 [沙利文与习近平、张又侠会面，推动中美军事沟通](/articles/nyt/1042429.md)
@@ -598,6 +600,4 @@
 5-29 [外企出走、中资涌入：政治高压下的香港将走向何方](/articles/nyt/1042725.md)
 
 5-29 [立法院打架、数万人街头抗议：台湾政治怎么了？](/articles/nyt/1042726.md)
-
-5-28 [“全民居者有其屋”：新加坡如何建立公共住房系统](/articles/nyt/1042727.md)
 
