--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-30 [哈里斯誓言在移民问题上采取更强硬态度，支持为以色列提供武器](/articles/voa/1012964.md)
+
 8-30 [中国海警称菲律宾在萨比纳浅滩的“冒险行径”可能引发事故](/articles/voa/1012965.md)
 
 8-30 [美日澳在台海问题上缺乏实质性合作，难以改变北京的决策？](/articles/voa/1012966.md)
@@ -598,6 +600,4 @@
 8-18 [南部非洲发展共同体：南部非洲将近6800万人遭遇干旱](/articles/voa/1013262.md)
 
 8-18 [美国副总统究竟是干嘛的？你不知道的关于副总统的林林总总](/articles/voa/1013263.md)
-
-8-18 [委内瑞拉反对派抗议，选举纠纷继续拖延](/articles/voa/1013264.md)
 
