--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-30 [【404帖子】易胜华律师：太原公安下一步应该就是找我了……以这种方式给自己的律师职业画上句号，是最圆满的事情。](/articles/cdt/337542.md)
+
 8-30 [【404文库】法度Law｜对话李佩霞案家属委托律师：询问能否依法依规安排会见未被回应](/articles/cdt/337551.md)
 
 8-30 [【404文库】经济观察报｜超低利润席卷北京餐饮业](/articles/cdt/337553.md)
@@ -598,6 +600,4 @@
 7-24 [黑噪音｜当下的经济问题，是过去二十年竭泽而渔的代价](/articles/cdt/338616.md)
 
 7-24 [【404文库】“无论是为胡友平，还是为我们自己，我们都不能忘”（外二篇）](/articles/cdt/338617.md)
-
-7-24 [橙律师｜仅仅辞退性骚扰的男教授，就够了吗？](/articles/cdt/338621.md)
 
