--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-30 [太平洋岛国领导人拒绝北京切断与台湾关系的呼吁，延续与台北接触政策](/articles/voa/1012962.md)
+
 8-30 [台风“珊珊”席卷日本各地带来暴雨引发交通混乱](/articles/voa/1012963.md)
 
 8-30 [哈里斯誓言在移民问题上采取更强硬态度，支持为以色列提供武器](/articles/voa/1012964.md)
@@ -598,6 +600,4 @@
 8-18 [戴维营峰会一周年 美日韩领导人重申共同应对地区挑战的承诺](/articles/voa/1013260.md)
 
 8-18 [乌克兰扎波罗核电站附近发生爆炸 IAEA示警安全状况恶化](/articles/voa/1013261.md)
-
-8-18 [南部非洲发展共同体：南部非洲将近6800万人遭遇干旱](/articles/voa/1013262.md)
 
