--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+8-30 [中国至关重要，但美国总统候选人为何鲜少提及对华政策？](/articles/nyt/1042424.md)
+
+8-30 [“TikTok法案”无法解决的深层安全问题](/articles/nyt/1042425.md)
+
 8-30 [“人夫气质”助力美国大选](/articles/nyt/1042426.md)
 
 8-30 [《立场新闻》编辑被判“煽动”罪成，香港新闻自由再受打击](/articles/nyt/1042427.md)
@@ -596,8 +600,4 @@
 5-30 [IMF上调对中国经济增长预期，但对其产业政策提出质疑](/articles/nyt/1042722.md)
 
 5-29 [我们还有办法抵抗民粹主义浪潮吗](/articles/nyt/1042723.md)
-
-5-29 [安祖无人机，大疆的美国替代品还是“洗白”版本？](/articles/nyt/1042724.md)
-
-5-29 [外企出走、中资涌入：政治高压下的香港将走向何方](/articles/nyt/1042725.md)
 
