--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-30 [路透社：俄罗斯与中国合作伙伴的支付障碍在八月加剧](/articles/voa/1012960.md)
+
+8-30 [南中国海紧张升温之际 菲律宾与越南同意深化军事与防务关系](/articles/voa/1012961.md)
+
 8-30 [太平洋岛国领导人拒绝北京切断与台湾关系的呼吁，延续与台北接触政策](/articles/voa/1012962.md)
 
 8-30 [台风“珊珊”席卷日本各地带来暴雨引发交通混乱](/articles/voa/1012963.md)
@@ -596,8 +600,4 @@
 8-18 [巴黎奥运会后 中国严厉打击“饭圈”文化](/articles/voa/1013258.md)
 
 8-18 [洪都拉斯前副总统称若当选总统复交台湾 批评中国剥削殖民洪国](/articles/voa/1013259.md)
-
-8-18 [戴维营峰会一周年 美日韩领导人重申共同应对地区挑战的承诺](/articles/voa/1013260.md)
-
-8-18 [乌克兰扎波罗核电站附近发生爆炸 IAEA示警安全状况恶化](/articles/voa/1013261.md)
 
