--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+8-30 [太平洋岛国论坛重申台湾参与地位不变 中国特使：必须修正](/articles/dw/1024434.md)
+
 8-30 [专访：特朗普当选对中国来说更糟糕](/articles/dw/1024435.md)
 
 8-30 [特朗普出新书《拯救美国》 为会晤普京辩护](/articles/dw/1024436.md)
@@ -598,6 +600,4 @@
 7-31 [英国：持刀袭击案疑凶身份“传言”引发警民冲突](/articles/dw/1024732.md)
 
 7-31 [在乌克兰战争期间举办的音乐节](/articles/dw/1024733.md)
-
-7-31 [白俄总统卢卡申科赦免被判死刑的德国人](/articles/dw/1024734.md)
 
