--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+8-30 [台湾国防部：解放军尚不具备全面攻台能力](/articles/dw/1024432.md)
+
 8-30 [克里姆林宫：普京不怕在蒙古被逮捕](/articles/dw/1024433.md)
 
 8-30 [太平洋岛国论坛重申台湾参与地位不变 中国特使：必须修正](/articles/dw/1024434.md)
@@ -598,6 +600,4 @@
 7-31 [委内瑞拉民众抗议马杜罗操纵选举结果 11人丧生](/articles/dw/1024730.md)
 
 7-31 [哈马斯称其政治领导人哈尼亚遇袭身亡 北京谴责](/articles/dw/1024731.md)
-
-7-31 [英国：持刀袭击案疑凶身份“传言”引发警民冲突](/articles/dw/1024732.md)
 
