--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-30 [乌克兰空军司令：美国专家加入F-16战机坠毁原因调查](/articles/voa/1012959.md)
+
 8-30 [路透社：俄罗斯与中国合作伙伴的支付障碍在八月加剧](/articles/voa/1012960.md)
 
 8-30 [南中国海紧张升温之际 菲律宾与越南同意深化军事与防务关系](/articles/voa/1012961.md)
@@ -598,6 +600,4 @@
 8-18 [越南最高领导人苏林抵达中国展开为期三天访问 将会见习近平](/articles/voa/1013257.md)
 
 8-18 [巴黎奥运会后 中国严厉打击“饭圈”文化](/articles/voa/1013258.md)
-
-8-18 [洪都拉斯前副总统称若当选总统复交台湾 批评中国剥削殖民洪国](/articles/voa/1013259.md)
 
