--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+8-30 [国际市场疲软，国内竞争加剧，中国三大航空公司上半年集体亏损](/articles/voa/1012953.md)
+
+8-30 [国际失踪者日:台湾出版人富察上海遭捕逾500日，台湾民团吁中国确保人权](/articles/voa/1012954.md)
+
+8-30 [毛泽东前秘书李锐日记归属案继续审理中,专家证人陈述中共是否插手](/articles/voa/1012955.md)
+
 8-30 [中国推“房屋养老金”惹众怒 分析：政策恐拖垮房市](/articles/voa/1012956.md)
 
 8-30 [乌克兰空军司令：美国专家加入F-16战机坠毁原因调查](/articles/voa/1012957.md)
@@ -594,10 +600,4 @@
 8-19 [印度医生被奸杀引发的抗议在蔓延](/articles/voa/1013251.md)
 
 8-19 [布林肯再次推动加沙停火，以色列攻击打死28人](/articles/voa/1013252.md)
-
-8-19 [俄军本月第三次对基辅发动弹道导弹袭击，普京应对乌军越境袭击迟缓僵硬](/articles/voa/1013253.md)
-
-8-18 [越共领导人苏林访华突显与中国关键关系，尽管河内也加强对美关系](/articles/voa/1013254.md)
-
-8-18 [驳斥北京撤船要求，菲律宾强调南中国海萨比纳礁是菲领土](/articles/voa/1013255.md)
 
