--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-31 [林培瑞：司法争夺战-李锐日记放哪里？](/articles/voa/1012950.md)
+
 8-31 [秘鲁外长：拜登、习近平将出席利马亚太经合组织峰会](/articles/voa/1012951.md)
 
 8-31 [日本军费预算明年再创记录，发展重点在无人武器和人工智能](/articles/voa/1012952.md)
@@ -598,6 +600,4 @@
 8-19 [菲律宾两艘海警船与中国海警船碰撞后受损](/articles/voa/1013248.md)
 
 8-19 [美国民主党人计划在全国大会上庆祝卡玛拉·哈里斯](/articles/voa/1013249.md)
-
-8-19 [马尔代夫与中国自贸协议即将生效，引发主权担忧](/articles/voa/1013250.md)
 
