--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-31 [斯里兰卡总统选举：印度与中国的拉锯战](/articles/voa/1012949.md)
+
 8-31 [林培瑞：司法争夺战-李锐日记放哪里？](/articles/voa/1012950.md)
 
 8-31 [秘鲁外长：拜登、习近平将出席利马亚太经合组织峰会](/articles/voa/1012951.md)
@@ -598,6 +600,4 @@
 8-19 [韩美启动“乙支自由护盾”年度军演 以应对朝鲜军事和网络威胁](/articles/voa/1013247.md)
 
 8-19 [菲律宾两艘海警船与中国海警船碰撞后受损](/articles/voa/1013248.md)
-
-8-19 [美国民主党人计划在全国大会上庆祝卡玛拉·哈里斯](/articles/voa/1013249.md)
 
