--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,14 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-31 [中工网｜十年间减少1500万，离开建筑工地的农民工去哪了？](/articles/cdt/337524.md)
+
+8-31 [每日一语 2024.8.30](/articles/cdt/337525.md)
+
+8-31 [维权网：张展赴甘肃营救张盼成后失联](/articles/cdt/337528.md)
+
+8-31 [【404文库】白帝城杜甫｜厉害了，做核酸检测的企业准备做房屋检测了](/articles/cdt/337529.md)
+
 8-30 [【404帖子】易胜华律师：太原公安下一步应该就是找我了……以这种方式给自己的律师职业画上句号，是最圆满的事情。](/articles/cdt/337542.md)
 
 8-30 [【404文库】法度Law｜对话李佩霞案家属委托律师：询问能否依法依规安排会见未被回应](/articles/cdt/337551.md)
@@ -592,12 +600,4 @@
 7-24 [国家地理中文网｜河南人浇了三次才保住的玉米地，最后被淹死了](/articles/cdt/338602.md)
 
 7-24 [看理想｜人大男教授性骚扰事件，为何令人愤怒？](/articles/cdt/338611.md)
-
-7-24 [风灵｜从娃哈哈风波看国有企业的内在矛盾](/articles/cdt/338612.md)
-
-7-24 [三联生活周刊｜四川雅安山洪致14死25失联：预警后，他们仍难相信灾难会发生](/articles/cdt/338614.md)
-
-7-24 [黑噪音｜当下的经济问题，是过去二十年竭泽而渔的代价](/articles/cdt/338616.md)
-
-7-24 [【404文库】“无论是为胡友平，还是为我们自己，我们都不能忘”（外二篇）](/articles/cdt/338617.md)
 
