--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-31 [特朗普前国安顾问:特朗普最大成就或许是促成美国人就中共威胁达成共识](/articles/voa/1012942.md)
+
 8-31 [F-16坠毁后，泽连斯基将乌空军司令撤职](/articles/voa/1012943.md)
 
 8-31 [在地缘政治竞争背景下，太平洋岛国领导人宣布支持区域警务协议](/articles/voa/1012944.md)
@@ -598,6 +600,4 @@
 8-19 [俄罗斯谋求利用欧中贸易纠纷抢占中国猪肉进口市场](/articles/voa/1013240.md)
 
 8-19 [俄罗斯称乌军击中并损坏库尔斯克州塞姆河上第三座大桥](/articles/voa/1013241.md)
-
-8-19 [美中金融工作组在上海举行会议 建立“金融压力”事件联络渠道](/articles/voa/1013242.md)
 
