--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+8-31 [DW调查：俄羅斯訓練無人機獵殺烏克蘭平民](/articles/dw/1024430.md)
+
 8-30 [DW调查：俄罗斯可能训练无人机“猎杀”乌克兰人](/articles/dw/1024431.md)
 
 8-30 [台湾国防部：解放军尚不具备全面攻台能力](/articles/dw/1024432.md)
@@ -598,6 +600,4 @@
 8-1 [德國因網攻案召見中國大使 六四以來首例](/articles/dw/1024728.md)
 
 8-1 [藥檢疑雲延燒之際 潘展樂奪中國游泳首金](/articles/dw/1024729.md)
-
-7-31 [委内瑞拉民众抗议马杜罗操纵选举结果 11人丧生](/articles/dw/1024730.md)
 
