--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -43,6 +43,8 @@
 
 8-29 [衣者朝新｜作为一个小人物，当下如何自处？](/articles/cdt/337592.md)
 
+8-31 [【CDT月度视频】八月之声(2024)——向《四月之声》致敬](/articles/cdt/337593.md)
+
 8-28 [镜相｜复盘“小红书病”：焦虑、恐惧和“小红书味”](/articles/cdt/337595.md)
 
 8-28 [那些原本是废话的常识｜给一岁孩子“立规矩”，印证丛林社会遍地怂人](/articles/cdt/337597.md)
@@ -598,6 +600,4 @@
 7-24 [哲学王｜北大清华封闭校园，是社会衰败的征兆](/articles/cdt/338599.md)
 
 7-24 [国家地理中文网｜河南人浇了三次才保住的玉米地，最后被淹死了](/articles/cdt/338602.md)
-
-7-24 [看理想｜人大男教授性骚扰事件，为何令人愤怒？](/articles/cdt/338611.md)
 
