--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-31 [北约秘书长支持乌克兰基于自卫而攻入俄罗斯库尔斯克](/articles/voa/1012940.md)
+
 8-31 [美国贸易代表办公室推迟对中国关税的最终决定](/articles/voa/1012941.md)
 
 8-31 [特朗普前国安顾问:特朗普最大成就或许是促成美国人就中共威胁达成共识](/articles/voa/1012942.md)
@@ -598,6 +600,4 @@
 8-19 [日相岸田不连任 观察：他让日本在“天下围中”站上全球高度](/articles/voa/1013238.md)
 
 8-19 [中国网民热议富士康“重返郑州” 学者:只是全球布局一环](/articles/voa/1013239.md)
-
-8-19 [俄罗斯谋求利用欧中贸易纠纷抢占中国猪肉进口市场](/articles/voa/1013240.md)
 
