--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-31 [创作《下跪忏悔的毛》的旅美艺术家高氏兄弟 哥哥高兟传返华探亲时被捕](/articles/voa/1012939.md)
+
 8-31 [北约秘书长支持乌克兰基于自卫而攻入俄罗斯库尔斯克](/articles/voa/1012940.md)
 
 8-31 [美国贸易代表办公室推迟对中国关税的最终决定](/articles/voa/1012941.md)
@@ -598,6 +600,4 @@
 8-19 [布林肯：目前谈判是实现加沙停火的最后一次机会](/articles/voa/1013237.md)
 
 8-19 [日相岸田不连任 观察：他让日本在“天下围中”站上全球高度](/articles/voa/1013238.md)
-
-8-19 [中国网民热议富士康“重返郑州” 学者:只是全球布局一环](/articles/voa/1013239.md)
 
