--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+8-31 [太平洋岛国论坛在公报中删除涉台内容 台湾外交部批评中国“蛮横介入](/articles/voa/1012936.md)
+
+8-31 [7名美军在针对伊斯兰国的袭击中受伤，15名武装分子被击毙](/articles/voa/1012937.md)
+
+8-31 [中国经济持续下滑之际 劳工纠纷此伏彼起](/articles/voa/1012938.md)
+
 8-31 [创作《下跪忏悔的毛》的旅美艺术家高氏兄弟 哥哥高兟传返华探亲时被捕](/articles/voa/1012939.md)
 
 8-31 [北约秘书长支持乌克兰基于自卫而攻入俄罗斯库尔斯克](/articles/voa/1012940.md)
@@ -594,10 +600,4 @@
 8-20 [美国众议院新冠病毒大流行特别小组主席率团访问台湾](/articles/voa/1013234.md)
 
 8-19 [“神隐”三周后首现身 习近平见越共总书记苏林后徒留更多疑点](/articles/voa/1013235.md)
-
-8-19 [东京靖国神社再遭涂鸦，日本警方展开调查](/articles/voa/1013236.md)
-
-8-19 [布林肯：目前谈判是实现加沙停火的最后一次机会](/articles/voa/1013237.md)
-
-8-19 [日相岸田不连任 观察：他让日本在“天下围中”站上全球高度](/articles/voa/1013238.md)
 
