--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,11 +3,13 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-31 [阿罗汉不约｜砸锅卖铁，关键看砸谁的锅](/articles/cdt/337518.md)
+
 8-31 [中工网｜十年间减少1500万，离开建筑工地的农民工去哪了？](/articles/cdt/337524.md)
 
 8-31 [每日一语 2024.8.30](/articles/cdt/337525.md)
 
-8-31 [维权网：张展赴甘肃营救张盼成后失联](/articles/cdt/337528.md)
+8-31 [维权网｜张展赴甘肃营救张盼成后失联](/articles/cdt/337528.md)
 
 8-31 [【404文库】白帝城杜甫｜厉害了，做核酸检测的企业准备做房屋检测了](/articles/cdt/337529.md)
 
@@ -598,6 +600,4 @@
 7-24 [【404文库】正知局｜“鲜为人知”的共产党员赵紫阳](/articles/cdt/338597.md)
 
 7-24 [哲学王｜北大清华封闭校园，是社会衰败的征兆](/articles/cdt/338599.md)
-
-7-24 [国家地理中文网｜河南人浇了三次才保住的玉米地，最后被淹死了](/articles/cdt/338602.md)
 
