--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-31 [清雨影的Blog｜推荐系统如何让我们变得极端](/articles/cdt/337513.md)
+
+8-31 [亮见｜如此神经，竟然是真的](/articles/cdt/337516.md)
+
 8-31 [阿罗汉不约｜砸锅卖铁，关键看砸谁的锅](/articles/cdt/337518.md)
 
 8-31 [中工网｜十年间减少1500万，离开建筑工地的农民工去哪了？](/articles/cdt/337524.md)
@@ -596,8 +600,4 @@
 7-24 [每日一语 2024.7.23](/articles/cdt/338591.md)
 
 7-24 [人民路56号｜另一种悲歌：高考招生总坑乡下人](/articles/cdt/338594.md)
-
-7-24 [【404文库】正知局｜“鲜为人知”的共产党员赵紫阳](/articles/cdt/338597.md)
-
-7-24 [哲学王｜北大清华封闭校园，是社会衰败的征兆](/articles/cdt/338599.md)
 
