--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+8-31 [中国施压太平洋岛国论坛　台湾谴责「蛮横介入」](/articles/dw/1024423.md)
+
+8-31 [中国海军测量船进入日本领海 日方提出抗议](/articles/dw/1024424.md)
+
 8-31 [台湾民众党主席柯文哲不服逮捕 法院驳回提审](/articles/dw/1024425.md)
 
 8-31 [巴西大法官下令暂停X平台营运](/articles/dw/1024426.md)
@@ -596,8 +600,4 @@
 8-2 [德國因網攻案召見中國大使 北京提嚴正交涉](/articles/dw/1024721.md)
 
 8-1 [美国同“911”主谋达成认罪协议](/articles/dw/1024722.md)
-
-8-1 [德语媒体：中国国家黑客被曝光](/articles/dw/1024723.md)
-
-8-1 [以色列：哈马斯军事首领戴夫已身亡](/articles/dw/1024724.md)
 
