--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-31 [中国军机刚走海军船只又来，东京正式抗议北京的入侵行为](/articles/voa/1012932.md)
+
 8-31 [菲中再爆海上冲突，双方互指对方冲撞己方船只](/articles/voa/1012933.md)
 
 8-31 [自由之家：中国经济严峻维权事件激增 中产打破沉默挺身而出](/articles/voa/1012934.md)
@@ -598,6 +600,4 @@
 8-20 [印度总理莫迪将会晤乌克兰的泽连斯基](/articles/voa/1013230.md)
 
 8-20 [中国因素主导印度-日本2+2部长级对话](/articles/voa/1013231.md)
-
-8-20 [台湾民众党假账风暴 中国官媒网民借机诋毁民主制度](/articles/voa/1013232.md)
 
