--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-1 [台湾民众党主席柯文哲因涉贪指控，被检方羁押禁见](/articles/voa/1012931.md)
+
 8-31 [中国军机刚走海军船只又来，东京正式抗议北京的入侵行为](/articles/voa/1012932.md)
 
 8-31 [菲中再爆海上冲突，双方互指对方冲撞己方船只](/articles/voa/1012933.md)
@@ -598,6 +600,4 @@
 8-20 [泽连斯基称库尔斯克攻势正在实现目标;乌军在乌东战况吃紧](/articles/voa/1013229.md)
 
 8-20 [印度总理莫迪将会晤乌克兰的泽连斯基](/articles/voa/1013230.md)
-
-8-20 [中国因素主导印度-日本2+2部长级对话](/articles/voa/1013231.md)
 
