--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -17,6 +17,8 @@
 
 8-31 [【404文库】白帝城杜甫｜厉害了，做核酸检测的企业准备做房屋检测了](/articles/cdt/337529.md)
 
+9-1 [【404文库】“犯法的人步步高升，成了文旅局一把手；守法的人不能张嘴，否则就是违反规定”（外二篇）](/articles/cdt/337533.md)
+
 8-30 [【404帖子】易胜华律师：太原公安下一步应该就是找我了……以这种方式给自己的律师职业画上句号，是最圆满的事情。](/articles/cdt/337542.md)
 
 8-30 [【404文库】法度Law｜对话李佩霞案家属委托律师：询问能否依法依规安排会见未被回应](/articles/cdt/337551.md)
@@ -598,6 +600,4 @@
 7-25 [法律圆桌｜中国人民大学性骚扰事件，为何不能仅仅是师德问题？](/articles/cdt/338587.md)
 
 7-24 [每日一语 2024.7.23](/articles/cdt/338591.md)
-
-7-24 [人民路56号｜另一种悲歌：高考招生总坑乡下人](/articles/cdt/338594.md)
 
