--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -353,6 +353,8 @@
 
 8-10 [中国新闻周刊｜多地披露殡葬领域腐败案件](/articles/cdt/338108.md)
 
+9-1 [【中国哭墙】就让我们来看看，“哭墙”和“长城”，哪个会先塌吧（8月1日-8月31日，2024年）](/articles/cdt/338112.md)
+
 8-10 [常识流通处｜“早知如此，何必当初！”发出这种感慨的，不只是跑路的孟国总理](/articles/cdt/338116.md)
 
 8-10 [法规指南｜中级人民法院 副院长网上喊冤](/articles/cdt/338117.md)
@@ -598,6 +600,4 @@
 7-25 [知识分子｜李晟医生门诊中遇害，针对中国医生的暴力为什么越来越激进？](/articles/cdt/338584.md)
 
 7-25 [法律圆桌｜中国人民大学性骚扰事件，为何不能仅仅是师德问题？](/articles/cdt/338587.md)
-
-7-24 [每日一语 2024.7.23](/articles/cdt/338591.md)
 
