--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-1 [以色列空袭在加沙打死几十人，脊髓灰质炎疫苗接种同时接近](/articles/voa/1012929.md)
+
 9-1 [联合国人权报告发表二周年，各方对新疆状况感到失望，敦促北京停止迫害维吾尔人](/articles/voa/1012930.md)
 
 9-1 [台湾民众党主席柯文哲因涉贪指控，被检方羁押禁见](/articles/voa/1012931.md)
@@ -598,6 +600,4 @@
 8-20 [中国对伊朗和巴勒斯坦的影响能否为中东带来和平？](/articles/voa/1013227.md)
 
 8-20 [前美国众议员桑托斯认罪，面临至少两年监禁](/articles/voa/1013228.md)
-
-8-20 [泽连斯基称库尔斯克攻势正在实现目标;乌军在乌东战况吃紧](/articles/voa/1013229.md)
 
