--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,12 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+9-1 [【网络民议】“离婚冷静期”要拍电影 剧情：冲动离婚年轻夫妻重新爱上彼此](/articles/cdt/337503.md)
+
+9-1 [衣者褚｜万万没想到，会被省纪委约见](/articles/cdt/337504.md)
+
+9-1 [星球商业评论｜牢房玉液酒多少钱一杯](/articles/cdt/337506.md)
+
 8-31 [清雨影的Blog｜推荐系统如何让我们变得极端](/articles/cdt/337513.md)
 
 8-31 [亮见｜如此神经，竟然是真的](/articles/cdt/337516.md)
@@ -594,10 +600,4 @@
 7-25 [亮见｜穿着耐克反对文化入侵，怕不是有什么大病？](/articles/cdt/338577.md)
 
 7-25 [声道｜河南急了，喊话富士康，意味深长](/articles/cdt/338579.md)
-
-7-25 [玖奌杂货铺｜什么反对文化入侵。这是违法，是反智，是在反对改革开放](/articles/cdt/338582.md)
-
-7-25 [知识分子｜李晟医生门诊中遇害，针对中国医生的暴力为什么越来越激进？](/articles/cdt/338584.md)
-
-7-25 [法律圆桌｜中国人民大学性骚扰事件，为何不能仅仅是师德问题？](/articles/cdt/338587.md)
 
