--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-1 [中非合作论坛即将召开 习近平强调为“全球南方”贡献力量](/articles/voa/1012924.md)
+
+9-1 [泽连斯基敦促美国放行对俄更深入打击](/articles/voa/1012925.md)
+
 9-1 [以色列说，在加沙发现无名尸体](/articles/voa/1012926.md)
 
 9-1 [日本要其勤劳的公民尝试每星期工作四天](/articles/voa/1012927.md)
@@ -596,8 +600,4 @@
 8-20 [中国在台湾海峡巡航越过中线,民进党立委：利用渔船意外对台进行灰色袭扰徒增台人反感](/articles/voa/1013222.md)
 
 8-20 [就海警船相撞事件，美国支持菲律宾并谴责中国的“危险行动”(声明全文)](/articles/voa/1013223.md)
-
-8-20 [哈马斯与伊斯兰圣战组织宣称对特拉维夫发生的“自杀式”炸弹袭击负责](/articles/voa/1013224.md)
-
-8-20 [朝鲜叛逃记者为那些无法逃脱的人讲述](/articles/voa/1013225.md)
 
