--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,20 @@
 德国之声
 ------
 
+9-1 [澳洲勞權法上路 下班離線權促進生活工作平衡](/articles/dw/1024414.md)
+
+9-1 [德国与菲律宾寻求在印太加强防务关系](/articles/dw/1024415.md)
+
+9-1 [俄罗斯领空禁令帮助中国航空公司赢得竞争](/articles/dw/1024416.md)
+
+9-1 [新核时代：中美可能签订军控协议吗？](/articles/dw/1024417.md)
+
+9-1 [客座评论：毛邓兼用的习近平为何陷入困境](/articles/dw/1024418.md)
+
+9-1 [2024年残奥会开幕式不容错过的精彩瞬间](/articles/dw/1024419.md)
+
+9-1 [跨性别运动员出征巴黎残奥会](/articles/dw/1024420.md)
+
 8-31 [又双叒叕出撞船事件 中菲再次互相指责](/articles/dw/1024421.md)
 
 8-31 [F-16战机坠毁后 乌克兰空军司令被撤职](/articles/dw/1024422.md)
@@ -586,18 +600,4 @@
 8-3 [匈牙利放宽对俄罗斯人签证规定 欧盟“深表忧虑”](/articles/dw/1024712.md)
 
 8-2 [德国加入联合国军司令部 维护韩半岛稳定](/articles/dw/1024713.md)
-
-8-2 [菲律宾与日本首次在南中国海举行联合军演](/articles/dw/1024714.md)
-
-8-2 [超级富豪破坏民主政治？](/articles/dw/1024715.md)
-
-8-2 [换囚行动：德国释放俄罗斯杀人犯引争议](/articles/dw/1024716.md)
-
-8-2 [不到一分钟将对手打退赛 女拳击选手陷性别争议](/articles/dw/1024717.md)
-
-8-2 [中资修建柬埔寨运河 越南很担心](/articles/dw/1024718.md)
-
-8-2 [美俄大規模換囚行動 普丁成為贏家？](/articles/dw/1024719.md)
-
-8-2 [客座評論：「我要買GTR」和熊貓經濟](/articles/dw/1024720.md)
 
