--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-1 [教宗将展开具挑战性的亚太之旅 中国议题暗中浮现](/articles/voa/1012921.md)
+
 9-1 [中国公民记者张展传前往甘肃营救友人后再度被捕](/articles/voa/1012922.md)
 
 9-1 [德国重新启动遣返阿富汗人 极右翼政党有望首次赢得地区选举](/articles/voa/1012923.md)
@@ -598,6 +600,4 @@
 8-20 [布林肯：以色列接受美国的加沙停火过渡建议](/articles/voa/1013219.md)
 
 8-20 [抗议者在芝加哥民主党全国代表大会开幕期间举行示威游行](/articles/voa/1013220.md)
-
-8-20 [中国总理李强访问俄罗斯与白俄罗斯](/articles/voa/1013221.md)
 
