--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+9-1 [希腊9月1日起大幅提高“黄金签证”门槛](/articles/dw/1024410.md)
+
+9-1 [客座評論：那一年起，香港人有真正快樂過嗎？](/articles/dw/1024411.md)
+
 9-1 [以军在加沙找到六名人质遗体](/articles/dw/1024412.md)
 
 9-1 [小儿麻痹疫苗接种在加沙开始](/articles/dw/1024413.md)
@@ -596,8 +600,4 @@
 8-3 [哈里斯成为总统候选人 特朗普准备迎战](/articles/dw/1024708.md)
 
 8-3 [苏林成阮富仲接班人 誓言反腐 外交政策不变](/articles/dw/1024709.md)
-
-8-3 [美国取消9/11阴谋策划者的认罪协议](/articles/dw/1024710.md)
-
-8-3 [百年巴黎 奥运今昔](/articles/dw/1024711.md)
 
