--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-1 [中国市场: 从在华外国传统汽车厂商的金矿到亏损的“黑洞”](/articles/voa/1012919.md)
+
 9-1 [以色列在加沙寻获6名人质尸体 包括一名以色列裔美国人](/articles/voa/1012920.md)
 
 9-1 [教宗将展开具挑战性的亚太之旅 中国议题暗中浮现](/articles/voa/1012921.md)
@@ -598,6 +600,4 @@
 8-20 [菲律宾同意设立中心 协助“有限数量”的阿富汗人申请美国签证](/articles/voa/1013217.md)
 
 8-20 [美情报官员:伊朗应对特朗普及拜登-哈里斯竞选团队所遭黑客攻击负责](/articles/voa/1013218.md)
-
-8-20 [布林肯：以色列接受美国的加沙停火过渡建议](/articles/voa/1013219.md)
 
