--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+9-1 [波兰纪念二战爆发 总统再提战争赔偿](/articles/dw/1024409.md)
+
 9-1 [希腊9月1日起大幅提高“黄金签证”门槛](/articles/dw/1024410.md)
 
 9-1 [客座評論：那一年起，香港人有真正快樂過嗎？](/articles/dw/1024411.md)
@@ -598,6 +600,4 @@
 8-3 [获释俄罗斯政治犯：坚信祖国终将自由](/articles/dw/1024707.md)
 
 8-3 [哈里斯成为总统候选人 特朗普准备迎战](/articles/dw/1024708.md)
-
-8-3 [苏林成阮富仲接班人 誓言反腐 外交政策不变](/articles/dw/1024709.md)
 
