--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-1 [伦敦港人集会游行记念831事件五周年 受袭者要坚持说出真相](/articles/voa/1012916.md)
+
+9-1 [俄称莫斯科附近炼油厂和发电厂遇袭，基辅承认乌东前线乌军处境“困难”](/articles/voa/1012917.md)
+
 9-1 [泰国饱受中国价格战及不法活动双重冲击](/articles/voa/1012918.md)
 
 9-1 [中国市场: 从在华外国传统汽车厂商的金矿到亏损的“黑洞”](/articles/voa/1012919.md)
@@ -596,8 +600,4 @@
 8-20 [拜登在动情的告别演说中称赞哈里斯是民主党的未来](/articles/voa/1013214.md)
 
 8-20 [海警船相撞事件后 菲律宾称中国海警阻碍互信建立](/articles/voa/1013215.md)
-
-8-20 [哈里斯意外现身民主党全国代表大会，呼吁民主党人“战斗”](/articles/voa/1013216.md)
-
-8-20 [菲律宾同意设立中心 协助“有限数量”的阿富汗人申请美国签证](/articles/voa/1013217.md)
 
