--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-1 [内塔尼亚胡就人质被杀发表声明，发誓要找哈马斯“算账”](/articles/voa/1012915.md)
+
 9-1 [伦敦港人集会游行记念831事件五周年 受袭者要坚持说出真相](/articles/voa/1012916.md)
 
 9-1 [俄称莫斯科附近炼油厂和发电厂遇袭，基辅承认乌东前线乌军处境“困难”](/articles/voa/1012917.md)
@@ -598,6 +600,4 @@
 8-20 [香港记协调查：记者对香港新闻自由的评分创下新低](/articles/voa/1013213.md)
 
 8-20 [拜登在动情的告别演说中称赞哈里斯是民主党的未来](/articles/voa/1013214.md)
-
-8-20 [海警船相撞事件后 菲律宾称中国海警阻碍互信建立](/articles/voa/1013215.md)
 
