--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-2 [拜登政府推迟宣布中国制造商品的关税](/articles/voa/1012913.md)
+
 9-2 [非洲领导人聚集北京，在美中竞争大背景下继续向中国政府要钱](/articles/voa/1012914.md)
 
 9-1 [内塔尼亚胡就人质被杀发表声明，发誓要找哈马斯“算账”](/articles/voa/1012915.md)
@@ -598,6 +600,4 @@
 8-20 [中共恐吓台独，台学界、媒体能避就避 台商不担心？](/articles/voa/1013211.md)
 
 8-20 [布林肯前往埃及继续推动加沙停火](/articles/voa/1013212.md)
-
-8-20 [香港记协调查：记者对香港新闻自由的评分创下新低](/articles/voa/1013213.md)
 
