--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -13,6 +13,8 @@
 
 9-1 [星球商业评论｜牢房玉液酒多少钱一杯](/articles/cdt/337506.md)
 
+9-2 [【CDT报告汇】ASPI：蒙古文化变北疆文化，中共新话旨在削弱蒙古族身份认同（外二篇）](/articles/cdt/337508.md)
+
 8-31 [清雨影的Blog｜推荐系统如何让我们变得极端](/articles/cdt/337513.md)
 
 8-31 [亮见｜如此神经，竟然是真的](/articles/cdt/337516.md)
@@ -598,6 +600,4 @@
 7-25 [每日一语 2024.7.24](/articles/cdt/338572.md)
 
 7-25 [凤羽财经｜这几年有点上进心的年轻人，都负债累累了……](/articles/cdt/338574.md)
-
-7-29 [【CDT周报】第180期：旱灾洪灾都挡不住粮食的年年增产](/articles/cdt/338575.md)
 
