--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-2 [欧盟谴责中国对菲律宾船只采取“危险行动”](/articles/voa/1012911.md)
+
 9-2 [莫斯科指责基辅对俄罗斯发动大规模无人机攻击](/articles/voa/1012912.md)
 
 9-2 [拜登政府推迟宣布中国制造商品的关税](/articles/voa/1012913.md)
@@ -598,6 +600,4 @@
 8-20 [台湾在敏感试验基地向媒体展示防空导弹操演威力](/articles/voa/1013209.md)
 
 8-20 [中国官方承认社保基金形势严峻，专家：解决之道缺乏可行性](/articles/voa/1013210.md)
-
-8-20 [中共恐吓台独，台学界、媒体能避就避 台商不担心？](/articles/voa/1013211.md)
 
