--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-2 [中国在非洲的五个重要“一带一路”项目](/articles/voa/1012909.md)
+
+9-2 [从魔都到华府，一家中文独立书店的双城生死记](/articles/voa/1012910.md)
+
 9-2 [欧盟谴责中国对菲律宾船只采取“危险行动”](/articles/voa/1012911.md)
 
 9-2 [莫斯科指责基辅对俄罗斯发动大规模无人机攻击](/articles/voa/1012912.md)
@@ -596,8 +600,4 @@
 8-20 [欧盟下调特斯拉和中国车企的关税税率，中国以减少投资威胁欧洲](/articles/voa/1013207.md)
 
 8-20 [港人纷纷离开家园 大陆人填补空缺？](/articles/voa/1013208.md)
-
-8-20 [台湾在敏感试验基地向媒体展示防空导弹操演威力](/articles/voa/1013209.md)
-
-8-20 [中国官方承认社保基金形势严峻，专家：解决之道缺乏可行性](/articles/voa/1013210.md)
 
