--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+9-2 [美国谴责中国“故意”与菲律宾海岸警卫队船只相撞](/articles/nyt/1042422.md)
+
 9-2 [韩国最高情报机构官员被指控向中国泄露卧底特工名单](/articles/nyt/1042423.md)
 
 8-30 [中国至关重要，但美国总统候选人为何鲜少提及对华政策？](/articles/nyt/1042424.md)
@@ -598,6 +600,4 @@
 5-31 [熊猫外交重启，“宝力”和“青宝”将赴华盛顿](/articles/nyt/1042720.md)
 
 5-30 [大国冲突幽灵再现，美军尚未做好准备](/articles/nyt/1042721.md)
-
-5-30 [IMF上调对中国经济增长预期，但对其产业政策提出质疑](/articles/nyt/1042722.md)
 
