--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+9-2 [解碼中國：梵蒂岡艱難的外交處境](/articles/dw/1024404.md)
+
 9-2 [柯文哲獲釋批檢方「壓迫凌虐」 北檢：與事實不符](/articles/dw/1024405.md)
 
 9-1 [阿尔及利亚正式加入金砖国家新开发银行](/articles/dw/1024406.md)
@@ -598,6 +600,4 @@
 8-4 [巴黎奥运的特别时刻](/articles/dw/1024702.md)
 
 8-4 [客座评论：党国的舆论棒槌打向胡锡进](/articles/dw/1024703.md)
-
-8-4 [U17潜艇登陆：从海洋到博物馆](/articles/dw/1024704.md)
 
