--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-2 [8月财新中国制造业PMI重回扩张 但外需下滑](/articles/voa/1012908.md)
+
 9-2 [中国在非洲的五个重要“一带一路”项目](/articles/voa/1012909.md)
 
 9-2 [从魔都到华府，一家中文独立书店的双城生死记](/articles/voa/1012910.md)
@@ -598,6 +600,4 @@
 8-20 [美中为何对刚结束的金融工作组会议做出不同表述？](/articles/voa/1013206.md)
 
 8-20 [欧盟下调特斯拉和中国车企的关税税率，中国以减少投资威胁欧洲](/articles/voa/1013207.md)
-
-8-20 [港人纷纷离开家园 大陆人填补空缺？](/articles/voa/1013208.md)
 
