--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+9-2 [教宗出訪亞洲 中梵關係何去何從？](/articles/dw/1024402.md)
+
+9-2 [解码中國：梵蒂岡艱難的外交處境](/articles/dw/1024403.md)
+
 9-2 [解碼中國：梵蒂岡艱難的外交處境](/articles/dw/1024404.md)
 
 9-2 [柯文哲獲釋批檢方「壓迫凌虐」 北檢：與事實不符](/articles/dw/1024405.md)
@@ -596,8 +600,4 @@
 8-4 [德国外长强调在德部署美国远程武器的重要性](/articles/dw/1024700.md)
 
 8-4 [德国防长到访菲律宾 两国加强军事合作](/articles/dw/1024701.md)
-
-8-4 [巴黎奥运的特别时刻](/articles/dw/1024702.md)
-
-8-4 [客座评论：党国的舆论棒槌打向胡锡进](/articles/dw/1024703.md)
 
