--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+9-2 [每日一语 2024.9.1](/articles/cdt/337480.md)
+
 9-2 [水瓶纪元｜一个中国女孩在蒙古遭受性侵之后](/articles/cdt/337484.md)
 
 9-2 [情况有点复杂｜吹哨人⌜狱中传话⌟，紧急邀请万人传话](/articles/cdt/337485.md)
@@ -598,6 +600,4 @@
 7-26 [WOMEN我们｜声援“四通桥”抗议者郭艺：“实名让我感觉更有力量”](/articles/cdt/338562.md)
 
 7-26 [衣者褚｜女乡党委书记之父举报县委书记性侵，省级纪委应尽快介入](/articles/cdt/338564.md)
-
-7-26 [yaya的房间｜人大王贵元事件有感——我也曾遇到问题“导师”](/articles/cdt/338565.md)
 
