--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -25,6 +25,8 @@
 
 9-2 [【CDT报告汇】ASPI：蒙古文化变北疆文化，中共新话旨在削弱蒙古族身份认同（外二篇）](/articles/cdt/337508.md)
 
+9-2 [【CDT周报】第185期：从“住房养老金”到“砸锅卖铁”，一个“造梗治国”的草台班子?](/articles/cdt/337510.md)
+
 8-31 [清雨影的Blog｜推荐系统如何让我们变得极端](/articles/cdt/337513.md)
 
 8-31 [亮见｜如此神经，竟然是真的](/articles/cdt/337516.md)
@@ -598,6 +600,4 @@
 7-26 [端传媒 x NGOCN｜女性抗争者李翘楚： “我有英雄情结，但我幻想的英雄是我自己”](/articles/cdt/338558.md)
 
 7-26 [WOMEN我们｜声援“四通桥”抗议者郭艺：“实名让我感觉更有力量”](/articles/cdt/338562.md)
-
-7-26 [衣者褚｜女乡党委书记之父举报县委书记性侵，省级纪委应尽快介入](/articles/cdt/338564.md)
 
