--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+9-2 [从加沙、约旦河西岸到黎巴嫩，以色列“打不完”的仗](/articles/nyt/1042420.md)
+
 9-2 [贸易保护主义最终将伤害谁](/articles/nyt/1042421.md)
 
 9-2 [美国谴责中国“故意”与菲律宾海岸警卫队船只相撞](/articles/nyt/1042422.md)
@@ -598,6 +600,4 @@
 5-31 [香港“47人案”：14名民主活动人士被判“颠覆”罪成](/articles/nyt/1042718.md)
 
 5-31 [极端热浪侵袭印度，新德里超52度高温创纪录](/articles/nyt/1042719.md)
-
-5-31 [熊猫外交重启，“宝力”和“青宝”将赴华盛顿](/articles/nyt/1042720.md)
 
