--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+9-2 [中国批评欧盟在南海问题上炒作、拉偏架](/articles/dw/1024401.md)
+
 9-2 [教宗出訪亞洲 中梵關係何去何從？](/articles/dw/1024402.md)
 
 9-2 [解码中國：梵蒂岡艱難的外交處境](/articles/dw/1024403.md)
@@ -598,6 +600,4 @@
 8-4 [巴基斯坦的中国债务困局](/articles/dw/1024699.md)
 
 8-4 [德国外长强调在德部署美国远程武器的重要性](/articles/dw/1024700.md)
-
-8-4 [德国防长到访菲律宾 两国加强军事合作](/articles/dw/1024701.md)
 
