--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-2 [西方出口限制迫在眉睫 中国将向非洲领导人推介绿色技术出口](/articles/voa/1012904.md)
+
+9-2 [乌克兰军方：俄罗斯向基辅发射了一系列无人机及导弹攻击](/articles/voa/1012905.md)
+
 9-2 [“烂尾娃”一代：中国青年的失业问题](/articles/voa/1012906.md)
 
 9-2 [台湾民众党主席柯文哲遭涉贪调查 经侦讯后获释](/articles/voa/1012907.md)
@@ -596,8 +600,4 @@
 8-21 [日本开发无人水面舰艇 部署“幽灵舰队”对抗中国](/articles/voa/1013202.md)
 
 8-21 [日本扩大在欧美及亚洲推销水产，取代失去的中国市场](/articles/voa/1013203.md)
-
-8-21 [欧中贸易纠纷远非电动车，欧盟调查分五路展开](/articles/voa/1013204.md)
-
-8-21 [布林肯：以色列接受了美方加沙停火过渡性方案](/articles/voa/1013205.md)
 
