--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,12 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+9-2 [【异文观止】确山县人民政府｜今年农村换届选举，想要竞选村支书，一定要具备这几大条件](/articles/cdt/337464.md)
+
+9-2 [新新默存｜人民币汇率升值背后的真正秘密](/articles/cdt/337465.md)
+
+9-2 [七使2022｜路虎女与挨打男，背后的常识和法律](/articles/cdt/337467.md)
+
 9-2 [每日一语 2024.9.1](/articles/cdt/337480.md)
 
 9-2 [水瓶纪元｜一个中国女孩在蒙古遭受性侵之后](/articles/cdt/337484.md)
@@ -594,10 +600,4 @@
 7-27 [每日一语 2024.7.25](/articles/cdt/338544.md)
 
 7-27 [【CDT报告汇】保卫民主基金会：南海威慑不足可能引发地区冲突](/articles/cdt/338554.md)
-
-7-26 [老牌恶棍｜金牌还是金钱？答案显而易见](/articles/cdt/338556.md)
-
-7-26 [端传媒 x NGOCN｜女性抗争者李翘楚： “我有英雄情结，但我幻想的英雄是我自己”](/articles/cdt/338558.md)
-
-7-26 [WOMEN我们｜声援“四通桥”抗议者郭艺：“实名让我感觉更有力量”](/articles/cdt/338562.md)
 
