--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+9-3 [每日一语 2024.9.2](/articles/cdt/337439.md)
+
+9-3 [【翻车现场】“从厉害了我的国，到砸锅卖铁，一路征程一路高歌”](/articles/cdt/337446.md)
+
 9-2 [【网络民议】“房屋养老金不要老百姓直接出钱，可不可以理解为‘要老百姓间接出钱’呢？”](/articles/cdt/337450.md)
 
 9-2 [四环青年｜商户用工业硫磺熏枸杞，别总等媒体曝光才严查](/articles/cdt/337453.md)
@@ -596,8 +600,4 @@
 7-27 [果壳｜巴黎奥运会开幕式的28个看点：有种不顾观众死活的美](/articles/cdt/338505.md)
 
 7-27 [木蹊说｜爷爷，我也想去中信建投](/articles/cdt/338512.md)
-
-7-27 [西坡原创｜穷得只剩下赢了](/articles/cdt/338514.md)
-
-7-27 [每日一语 2024.7.26](/articles/cdt/338537.md)
 
