--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+9-3 [老牌恶棍｜适合“中国宝宝”敏感体质的AI，才是好AI](/articles/cdt/337437.md)
+
 9-3 [每日一语 2024.9.2](/articles/cdt/337439.md)
 
 9-3 [【翻车现场】“从厉害了我的国，到砸锅卖铁，一路征程一路高歌”](/articles/cdt/337446.md)
@@ -598,6 +600,4 @@
 7-28 [【网络民议】“It must be Chinese before you”](/articles/cdt/338503.md)
 
 7-27 [果壳｜巴黎奥运会开幕式的28个看点：有种不顾观众死活的美](/articles/cdt/338505.md)
-
-7-27 [木蹊说｜爷爷，我也想去中信建投](/articles/cdt/338512.md)
 
