--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-3 [以色列工会举行总罢工，要求政府达成停火协议，促成人质获释](/articles/voa/1012894.md)
+
+9-3 [台湾经济部长：特朗普“盘子上东西太多”，误解了台湾芯片产业的作用](/articles/voa/1012895.md)
+
 9-3 [中国经历最热7月后，大片地区再遭最热8月](/articles/voa/1012896.md)
 
 9-2 [赖清德：中国“吞台”若真为领土完整，就应该去收复被俄罗斯占据的大清领土](/articles/voa/1012897.md)
@@ -596,8 +600,4 @@
 8-21 [原声带·“因言获罪”的德国学者：习近平治下，中国越发像朝鲜](/articles/voa/1013192.md)
 
 8-21 [布林肯访问埃及和卡塔尔以推动加沙停火会谈，但休战仍可望不可及](/articles/voa/1013193.md)
-
-8-21 [台湾芯片巨头台积电在欧洲的第一家工厂破土动工](/articles/voa/1013194.md)
-
-8-21 [南中国海局势升温之际，中国减少亚丁湾护航编队部署](/articles/voa/1013195.md)
 
