--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-3 [中国恢复进口台湾文旦柚，专家:“将水果当成统战工具”](/articles/voa/1012893.md)
+
 9-3 [以色列工会举行总罢工，要求政府达成停火协议，促成人质获释](/articles/voa/1012894.md)
 
 9-3 [台湾经济部长：特朗普“盘子上东西太多”，误解了台湾芯片产业的作用](/articles/voa/1012895.md)
@@ -598,6 +600,4 @@
 8-21 [民主党全国代表大会第二夜：前总统奥巴马与第二先生埃姆霍夫是主要演讲人](/articles/voa/1013191.md)
 
 8-21 [原声带·“因言获罪”的德国学者：习近平治下，中国越发像朝鲜](/articles/voa/1013192.md)
-
-8-21 [布林肯访问埃及和卡塔尔以推动加沙停火会谈，但休战仍可望不可及](/articles/voa/1013193.md)
 
