--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-3 [数千名美国酒店员工在劳工节周末罢工](/articles/voa/1012891.md)
+
+9-3 [台风 “珊珊”猛烈来袭 中国游客体验日中救灾差异](/articles/voa/1012892.md)
+
 9-3 [中国恢复进口台湾文旦柚，专家:“将水果当成统战工具”](/articles/voa/1012893.md)
 
 9-3 [以色列工会举行总罢工，要求政府达成停火协议，促成人质获释](/articles/voa/1012894.md)
@@ -596,8 +600,4 @@
 8-21 [分析：中菲之间再次紧张考验维持南中国海平静的努力](/articles/voa/1013189.md)
 
 8-21 [《纽时》报道拜登批准秘密修订核战略，聚焦中国；白宫表示并非专对某一国家或威胁](/articles/voa/1013190.md)
-
-8-21 [民主党全国代表大会第二夜：前总统奥巴马与第二先生埃姆霍夫是主要演讲人](/articles/voa/1013191.md)
-
-8-21 [原声带·“因言获罪”的德国学者：习近平治下，中国越发像朝鲜](/articles/voa/1013192.md)
 
