--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+9-3 [英国以存在违反国际人道法风险为原因而暂停向以色列出口某些武器](/articles/voa/1012888.md)
+
+9-3 [菲律宾当局拘留160多名网络犯罪嫌疑人，多数为中国和印尼人](/articles/voa/1012889.md)
+
+9-3 [中国经济困境导致股市波动](/articles/voa/1012890.md)
+
 9-3 [数千名美国酒店员工在劳工节周末罢工](/articles/voa/1012891.md)
 
 9-3 [台风 “珊珊”猛烈来袭 中国游客体验日中救灾差异](/articles/voa/1012892.md)
@@ -594,10 +600,4 @@
 8-21 [“事关真实的历史” 毛泽东前秘书李锐日记司法争夺战加州继续](/articles/voa/1013186.md)
 
 8-21 [战火阻断与中国的关键贸易路线，缅甸经济困境雪上加霜](/articles/voa/1013187.md)
-
-8-21 [中国大幅减少新燃煤电厂的批准，2022-23年新燃煤电厂激增令气候专家震惊](/articles/voa/1013188.md)
-
-8-21 [分析：中菲之间再次紧张考验维持南中国海平静的努力](/articles/voa/1013189.md)
-
-8-21 [《纽时》报道拜登批准秘密修订核战略，聚焦中国；白宫表示并非专对某一国家或威胁](/articles/voa/1013190.md)
 
