--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-3 [普京抵达国际刑事法院成员国蒙古但未遭逮捕](/articles/voa/1012886.md)
+
+9-3 [美国以违反制裁为由扣押委内瑞拉总统使用的飞机](/articles/voa/1012887.md)
+
 9-3 [英国以存在违反国际人道法风险为原因而暂停向以色列出口某些武器](/articles/voa/1012888.md)
 
 9-3 [菲律宾当局拘留160多名网络犯罪嫌疑人，多数为中国和印尼人](/articles/voa/1012889.md)
@@ -596,8 +600,4 @@
 8-21 [中国青年失业率高企催生出新世代阶级—“烂尾娃”](/articles/voa/1013184.md)
 
 8-21 [太平洋岛国论坛前夕 习近平表示支持斐济总理的“和平之海”愿景](/articles/voa/1013185.md)
-
-8-21 [“事关真实的历史” 毛泽东前秘书李锐日记司法争夺战加州继续](/articles/voa/1013186.md)
-
-8-21 [战火阻断与中国的关键贸易路线，缅甸经济困境雪上加霜](/articles/voa/1013187.md)
 
