--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-3 [中国和南非同意寻求贸易平衡和增加更多投资](/articles/voa/1012878.md)
+
+9-3 [教宗抵达印度尼西亚 开启历史性的亚太之行](/articles/voa/1012879.md)
+
 9-3 [五人在纽约市西印度群岛美国日游行中遭枪击](/articles/voa/1012880.md)
 
 9-3 [俄罗斯空袭击中基辅和其他乌克兰城市](/articles/voa/1012881.md)
@@ -596,8 +600,4 @@
 8-21 [奥巴马呼吁美国选民拥抱哈里斯，并警告选战艰苦](/articles/voa/1013176.md)
 
 8-21 [莫斯科遭到乌克兰大规模无人机袭击](/articles/voa/1013177.md)
-
-8-21 [中国拟结婚离婚不需户口 应对人口下降良策？](/articles/voa/1013178.md)
-
-8-21 [国事光析：邓小平的藤怎样结出习近平的瓜？](/articles/voa/1013179.md)
 
