--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+9-3 [石油大于国际法？蒙古无视国际逮捕令欢迎普京](/articles/nyt/1042416.md)
+
 9-3 [中国重振经济为何这么难](/articles/nyt/1042417.md)
 
 9-3 [艺术家高兟回中国探亲时被捕，曾创作批评文革作品](/articles/nyt/1042418.md)
@@ -598,6 +600,4 @@
 5-31 [关于特朗普的有罪判决，你应该知道的](/articles/nyt/1042714.md)
 
 5-31 [OpenAI称中俄利用其人工智能技术操纵舆论](/articles/nyt/1042715.md)
-
-5-31 [特朗普封口费案34项罪名全部成立](/articles/nyt/1042716.md)
 
