--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+9-3 [德国经济界对右翼势力在德东地区的崛起感到担忧](/articles/dw/1024393.md)
+
 9-3 [普丁出訪蒙古 中俄天然氣管線有望推進？](/articles/dw/1024394.md)
 
 9-2 [日本限制出口芯片制造设备恐遭中国报复](/articles/dw/1024395.md)
@@ -598,6 +600,4 @@
 8-5 [孟加拉抗议活动不止 哈西娜总理已逃到国外](/articles/dw/1024691.md)
 
 8-5 [台湾要求法国调查台湾球迷所持标语遭抢夺事件](/articles/dw/1024692.md)
-
-8-5 [美国拟禁止自动驾驶汽车用中国软件](/articles/dw/1024693.md)
 
