--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-3 [普京在战争罪指控的阴影下会晤蒙古总统](/articles/voa/1012875.md)
+
 9-3 [中国宣布对加拿大油菜籽和化工品发起反倾销调查](/articles/voa/1012876.md)
 
 9-3 [中国山东一校车冲撞人群致11死13伤](/articles/voa/1012877.md)
@@ -598,6 +600,4 @@
 8-21 [沃尔玛清仓京东股份，声称要集中资源发展中国业务](/articles/voa/1013173.md)
 
 8-21 [中国升级报复，宣布对欧盟多种产品展开反补贴调查](/articles/voa/1013174.md)
-
-8-21 [美国前驻联合国大使黑利呼吁全球扩大对台湾的支持](/articles/voa/1013175.md)
 
