--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,16 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+9-3 [【404文库】每日人物｜住在办公室的人](/articles/cdt/337423.md)
+
+9-3 [老萧杂说｜青岛路虎女被制成车贴，这是城市的耻辱印记](/articles/cdt/337425.md)
+
+9-3 [读宋史的赵大胖｜那个晕倒的孩子，以及身边站得直挺挺的同学](/articles/cdt/337427.md)
+
+9-3 [城市的地得｜有一种真正的漠不关心](/articles/cdt/337429.md)
+
+9-3 [亮见｜发明“恶意返乡”的县长升官了，恭喜恭喜](/articles/cdt/337431.md)
+
 9-3 [老牌恶棍｜适合“中国宝宝”敏感体质的AI，才是好AI](/articles/cdt/337437.md)
 
 9-3 [每日一语 2024.9.2](/articles/cdt/337439.md)
@@ -590,14 +600,4 @@
 7-31 [【网络民议】中信建投实习生少爷的一天](/articles/cdt/338475.md)
 
 7-29 [【敏感词库】退休时间、央视解说沉默了](/articles/cdt/338477.md)
-
-7-29 [【网络民议】“央视解说沉默了，直播这事不适合央视，不能完全把控局面”](/articles/cdt/338489.md)
-
-7-28 [Lola｜这世界有太多过去，未来却不断缩水](/articles/cdt/338497.md)
-
-7-28 [唐一水｜怎么，巴黎开幕吓到你了？](/articles/cdt/338499.md)
-
-7-28 [【网络民议】“It must be Chinese before you”](/articles/cdt/338503.md)
-
-7-27 [果壳｜巴黎奥运会开幕式的28个看点：有种不顾观众死活的美](/articles/cdt/338505.md)
 
