--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+9-3 [大众前CEO文德恩因“柴油门”丑闻接受审判](/articles/dw/1024390.md)
+
 9-3 [香港“47人案“结束陈情阶段](/articles/dw/1024391.md)
 
 9-3 [山东发生校车事故 五名学生丧生](/articles/dw/1024392.md)
@@ -598,6 +600,4 @@
 8-5 [动荡中的委内瑞拉](/articles/dw/1024688.md)
 
 8-5 [TikTok Lite奖励功能在欧盟境内永久撤销](/articles/dw/1024689.md)
-
-8-5 [欧盟拒绝承认马杜罗获得连任](/articles/dw/1024690.md)
 
