--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-3 [无国界记者对中国公民记者张展据传再次被捕表示关注](/articles/voa/1012873.md)
+
 9-3 [美国气候特使波德斯塔本周将赴北京举行双边气候会谈](/articles/voa/1012874.md)
 
 9-3 [普京在战争罪指控的阴影下会晤蒙古总统](/articles/voa/1012875.md)
@@ -598,6 +600,4 @@
 8-22 [普京在莫斯科会晤李强，希望进一步发展双边经贸关系](/articles/voa/1013171.md)
 
 8-22 [中共高调纪念邓小平冥诞 分析:借“改革开放”护航习近平集权](/articles/voa/1013172.md)
-
-8-21 [沃尔玛清仓京东股份，声称要集中资源发展中国业务](/articles/voa/1013173.md)
 
