--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-4 [中国内需不振转向非洲买家，中欧竞争给安哥拉带来机会](/articles/voa/1012863.md)
+
+9-4 [俄导弹袭击致乌克兰220多人伤亡，美接近同意向乌提供远程导弹](/articles/voa/1012864.md)
+
 9-4 [纽约州州长前华裔副幕僚长被FBI逮捕，被控中国政府代理人](/articles/voa/1012865.md)
 
 9-4 [香港民主党提施政报告建议 呼吁当局让社会各界畅所欲言](/articles/voa/1012866.md)
@@ -596,8 +600,4 @@
 8-22 [台湾绝不能陷落：彭斯撰文批评特朗普涉台言论为孤立主义](/articles/voa/1013161.md)
 
 8-22 [莫谈“政治”，禁止“女权主义宣传”：热门中国电子游戏卷入言论审查风波](/articles/voa/1013162.md)
-
-8-22 [民主党大会第三夜:副总统候选人沃尔兹和前总统克林顿是主要演讲人](/articles/voa/1013163.md)
-
-8-22 [尽管加沙战火纷飞，以色列将注意力转向针对黎巴嫩的真主党](/articles/voa/1013164.md)
 
