--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-4 [中非合作论坛北京开幕 非洲民众希望领导人不要牺牲长远利益](/articles/voa/1012858.md)
+
+9-4 [冻卵在韩国日益流行，给予女性更多选择](/articles/voa/1012859.md)
+
 9-4 [汤加首相称警察提供“免于恐惧的自由”，并且支持民主](/articles/voa/1012860.md)
 
 9-4 [官员证实，土耳其希望加入金砖国家集团](/articles/voa/1012861.md)
@@ -596,8 +600,4 @@
 8-22 [面对中国威胁台湾国防预算增速超过GDP增长](/articles/voa/1013156.md)
 
 8-22 [比亚迪推进在墨西哥建厂计划 希望享受州政府优惠政策](/articles/voa/1013157.md)
-
-8-22 [美国高级官员在纽约与达赖喇嘛会面](/articles/voa/1013158.md)
-
-8-22 [以民运人士身份活动的纽约居民唐元隽被美司法部指控为北京监视中国异议人士](/articles/voa/1013159.md)
 
