--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+9-4 [美国再次呼吁以色列、哈马斯达成停火协议](/articles/voa/1012855.md)
+
+9-4 [中国用海上行动考验美国的印太地区承诺](/articles/voa/1012856.md)
+
+9-4 [民进党秘书长林右昌访华盛顿与美官员交流：盼美对台情势有正确认知](/articles/voa/1012857.md)
+
 9-4 [中非合作论坛北京开幕 非洲民众希望领导人不要牺牲长远利益](/articles/voa/1012858.md)
 
 9-4 [冻卵在韩国日益流行，给予女性更多选择](/articles/voa/1012859.md)
@@ -594,10 +600,4 @@
 8-22 [关于中国扩大对欧盟进口产品的调查 你需要了解的几件事](/articles/voa/1013153.md)
 
 8-22 [美国约翰逊号导弹驱逐舰穿越台湾海峡](/articles/voa/1013154.md)
-
-8-22 [沃尔兹发表演说接受民主党副总统候选人提名](/articles/voa/1013155.md)
-
-8-22 [面对中国威胁台湾国防预算增速超过GDP增长](/articles/voa/1013156.md)
-
-8-22 [比亚迪推进在墨西哥建厂计划 希望享受州政府优惠政策](/articles/voa/1013157.md)
 
