--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+9-4 [【404文库】【立此存照】凤凰网财经｜孟晓苏：从小产权房起征房产税，每年能收2万亿](/articles/cdt/337416.md)
+
 9-3 [【404文库】每日人物｜住在办公室的人](/articles/cdt/337423.md)
 
 9-3 [老萧杂说｜青岛路虎女被制成车贴，这是城市的耻辱印记](/articles/cdt/337425.md)
@@ -598,6 +600,4 @@
 7-29 [冰川思享号｜巴黎奥运会，一场冒犯所有人的盛会](/articles/cdt/338465.md)
 
 7-31 [【网络民议】中信建投实习生少爷的一天](/articles/cdt/338475.md)
-
-7-29 [【敏感词库】退休时间、央视解说沉默了](/articles/cdt/338477.md)
 
