--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-4 [美国指控哈马斯领导人辛瓦尔和其他激进分子发动去年10月7日对以色列的大屠杀](/articles/voa/1012853.md)
+
+9-4 [前纽约州长助理孙雯被控非法充当中国政府代理人，被告首度出庭辩称无罪](/articles/voa/1012854.md)
+
 9-4 [美国再次呼吁以色列、哈马斯达成停火协议](/articles/voa/1012855.md)
 
 9-4 [中国用海上行动考验美国的印太地区承诺](/articles/voa/1012856.md)
@@ -596,8 +600,4 @@
 8-22 [中国证实被捕日企高管已被起诉 罪名是间谍罪](/articles/voa/1013151.md)
 
 8-22 [中国抗议美高级官员在纽约会晤康复中的西藏流亡精神领袖达赖喇嘛](/articles/voa/1013152.md)
-
-8-22 [关于中国扩大对欧盟进口产品的调查 你需要了解的几件事](/articles/voa/1013153.md)
-
-8-22 [美国约翰逊号导弹驱逐舰穿越台湾海峡](/articles/voa/1013154.md)
 
