--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+9-4 [拜登首席气候外交官波德斯塔访华](/articles/nyt/1042414.md)
+
 9-4 [万物皆可疑？一份中国国安部眼中的不完整威胁清单](/articles/nyt/1042415.md)
 
 9-3 [石油大于国际法？蒙古无视国际逮捕令欢迎普京](/articles/nyt/1042416.md)
@@ -598,6 +600,4 @@
 6-3 [声援、警惕与担忧：世界各国密切关注特朗普政治前景](/articles/nyt/1042712.md)
 
 5-31 [如果特朗普被判入狱，特勤局特工也得“进去”](/articles/nyt/1042713.md)
-
-5-31 [关于特朗普的有罪判决，你应该知道的](/articles/nyt/1042714.md)
 
