--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-4 [财新PMI显示中国8月份服务业活动扩张放缓](/articles/voa/1012849.md)
+
+9-4 [中国与尼日利亚建立全面战略伙伴关系 承诺鼓励企业赴尼投资](/articles/voa/1012850.md)
+
 9-4 [起诉书详细披露前纽约州长助理孙雯被控中共代理人案细节：成功阻止州长与蔡英文会面](/articles/voa/1012851.md)
 
 9-4 [美国寻求安抚选民：总统选举是安全的](/articles/voa/1012852.md)
@@ -596,8 +600,4 @@
 8-23 [台总统赖清德准备首次以总统身份视察金门前线，主持八二三炮战66周年祭典](/articles/voa/1013147.md)
 
 8-22 [台湾总统赖清德会见美国前驻联合国大使妮基·黑利](/articles/voa/1013148.md)
-
-8-22 [各方推动加沙停火协议之际，以军空袭加沙及黎巴嫩南部](/articles/voa/1013149.md)
-
-8-22 [“上四休三”却减薪，中国企业祭不裁员“降本增效”新招？](/articles/voa/1013150.md)
 
