--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+9-4 [金宏伟｜“合法诉求渠道”里的人，也在网络喊冤](/articles/cdt/337406.md)
+
 9-4 [常识流通处｜很多进口药，悄无声息地消失了](/articles/cdt/337408.md)
 
 9-4 [【404文库】卖杏花｜没办法](/articles/cdt/337411.md)
@@ -598,6 +600,4 @@
 7-29 [那些原本是废话的常识｜为何世界最受欢迎运动项目对奥运很冷淡](/articles/cdt/338446.md)
 
 7-29 [每日一语 2024.7.28](/articles/cdt/338448.md)
-
-7-29 [冰川思享号｜一座城市18个高铁站，真为地方财政捏一把汗](/articles/cdt/338457.md)
 
