--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-4 [中国国安部要青年学子警惕“帅哥美女境外间谍”](/articles/voa/1012846.md)
+
+9-4 [关于中非合作论坛峰会你需要知道的几件事](/articles/voa/1012847.md)
+
 9-4 [逃亡的菲律宾华裔前市长郭华萍在印尼落网](/articles/voa/1012848.md)
 
 9-4 [财新PMI显示中国8月份服务业活动扩张放缓](/articles/voa/1012849.md)
@@ -596,8 +600,4 @@
 8-23 [泽连斯基访问毗邻库尔斯克的乌克兰边境地区](/articles/voa/1013144.md)
 
 8-23 [中国扩大台海巡航执法，学者吁台湾警惕“切香肠”式灰色袭扰](/articles/voa/1013145.md)
-
-8-23 [身段柔软的莫迪赴基辅访问 称没有冲突能在战场上解决](/articles/voa/1013146.md)
-
-8-23 [台总统赖清德准备首次以总统身份视察金门前线，主持八二三炮战66周年祭典](/articles/voa/1013147.md)
 
