--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-4 [美国拟派遣更高级别官员率团参加北京香山论坛](/articles/voa/1012845.md)
+
 9-4 [中国国安部要青年学子警惕“帅哥美女境外间谍”](/articles/voa/1012846.md)
 
 9-4 [关于中非合作论坛峰会你需要知道的几件事](/articles/voa/1012847.md)
@@ -598,6 +600,4 @@
 8-23 [面对大规模抗议，印尼取消批准有争议的选举法修正案](/articles/voa/1013143.md)
 
 8-23 [泽连斯基访问毗邻库尔斯克的乌克兰边境地区](/articles/voa/1013144.md)
-
-8-23 [中国扩大台海巡航执法，学者吁台湾警惕“切香肠”式灰色袭扰](/articles/voa/1013145.md)
 
