--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+9-4 [中国对非洲贷款七年来首次增长](/articles/dw/1024380.md)
+
+9-4 [德国车企信心低迷 大众要打破“铁饭碗”](/articles/dw/1024381.md)
+
 9-4 [美国副助理防长将出席香山论坛](/articles/dw/1024382.md)
 
 9-4 [土耳其高官证实该国希望加入“金砖”集团](/articles/dw/1024383.md)
@@ -596,8 +600,4 @@
 8-6 [逃兵数量激增  乌军队：自愿返回就既往不咎](/articles/dw/1024678.md)
 
 8-6 [都是动物惹的祸：法兰克福机场周一夜间停电数小时](/articles/dw/1024679.md)
-
-8-6 [哈尼亚之死：“定点清除”是否合法？](/articles/dw/1024680.md)
-
-8-6 [法兰克福机场周一夜间停电数小时](/articles/dw/1024681.md)
 
