--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-4 [乌克兰外长库列巴辞职，泽连斯基：政府大调整迎接严冬季节的到来](/articles/voa/1012844.md)
+
 9-4 [美国拟派遣更高级别官员率团参加北京香山论坛](/articles/voa/1012845.md)
 
 9-4 [中国国安部要青年学子警惕“帅哥美女境外间谍”](/articles/voa/1012846.md)
@@ -598,6 +600,4 @@
 8-23 [欧盟将“坚决捍卫”面临中国反补贴调查的乳制品行业](/articles/voa/1013142.md)
 
 8-23 [面对大规模抗议，印尼取消批准有争议的选举法修正案](/articles/voa/1013143.md)
-
-8-23 [泽连斯基访问毗邻库尔斯克的乌克兰边境地区](/articles/voa/1013144.md)
 
