--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+9-4 [乌克兰外长库列巴请辞 议会或周四做出决定](/articles/dw/1024379.md)
+
 9-4 [中国对非洲贷款七年来首次增长](/articles/dw/1024380.md)
 
 9-4 [德国车企信心低迷 大众要打破“铁饭碗”](/articles/dw/1024381.md)
@@ -598,6 +600,4 @@
 8-6 [著名经济学家：对俄制裁收效甚微](/articles/dw/1024677.md)
 
 8-6 [逃兵数量激增  乌军队：自愿返回就既往不咎](/articles/dw/1024678.md)
-
-8-6 [都是动物惹的祸：法兰克福机场周一夜间停电数小时](/articles/dw/1024679.md)
 
