--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-4 [柬埔寨证实北京将赠与两艘战舰 或换取云朗海军基地独家使用权](/articles/voa/1012843.md)
+
 9-4 [乌克兰外长库列巴辞职，泽连斯基：政府大调整迎接严冬季节的到来](/articles/voa/1012844.md)
 
 9-4 [美国拟派遣更高级别官员率团参加北京香山论坛](/articles/voa/1012845.md)
@@ -598,6 +600,4 @@
 8-23 [中国新形态手法吸收台湾军人搜集情报，八名现役和退役军官涉共谍案被判刑](/articles/voa/1013141.md)
 
 8-23 [欧盟将“坚决捍卫”面临中国反补贴调查的乳制品行业](/articles/voa/1013142.md)
-
-8-23 [面对大规模抗议，印尼取消批准有争议的选举法修正案](/articles/voa/1013143.md)
 
