--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-5 [韩新领导人谴责平壤核武项目及朝俄军事合作,朝鲜再向韩国空飘垃圾气球](/articles/voa/1012838.md)
+
+9-5 [拜登对华关税决定为何迟迟不落地](/articles/voa/1012839.md)
+
 9-4 [美国在台协会处长：美国组印太同盟网以吓阻中国](/articles/voa/1012840.md)
 
 9-4 [美中气候特使在北京展开新一轮会谈，专家:美国大选给会谈带来不确定性](/articles/voa/1012841.md)
@@ -596,8 +600,4 @@
 8-23 [民主党大会最后一夜：哈里斯接受提名并将其愿景与特朗普的相对比](/articles/voa/1013136.md)
 
 8-23 [尼泊尔解除对TikTok实施的禁令](/articles/voa/1013137.md)
-
-8-23 [加沙停火协议迟迟难产，中东战火有扩大风险 美中均无力扭转？](/articles/voa/1013138.md)
-
-8-23 [中越元首会晤表明越南供应链平衡向中国倾斜](/articles/voa/1013139.md)
 
