--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-5 [中共意欲为何发习近平旧文：不培养社会主义掘墓人](/articles/voa/1012836.md)
+
+9-5 [中国经济走软殃及公募基金，更多基金公司向高管们追索超标薪资](/articles/voa/1012837.md)
+
 9-5 [韩新领导人谴责平壤核武项目及朝俄军事合作,朝鲜再向韩国空飘垃圾气球](/articles/voa/1012838.md)
 
 9-5 [拜登对华关税决定为何迟迟不落地](/articles/voa/1012839.md)
@@ -596,8 +600,4 @@
 8-23 [莫迪将对乌克兰展开历史性访问并推动结束俄乌战争](/articles/voa/1013134.md)
 
 8-23 [中国和白俄罗斯发表联合公报同意加强贸易与安全合作](/articles/voa/1013135.md)
-
-8-23 [民主党大会最后一夜：哈里斯接受提名并将其愿景与特朗普的相对比](/articles/voa/1013136.md)
-
-8-23 [尼泊尔解除对TikTok实施的禁令](/articles/voa/1013137.md)
 
