--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-5 [波音公司将很快将空太空舱送回地球。两名宇航局的宇航员将留下](/articles/voa/1012832.md)
+
+9-5 [中国军机首次亮相非洲 运-20/歼-10飞越金字塔能吸引几个买家？](/articles/voa/1012833.md)
+
 9-5 [有媒体报道中国驻纽约总领事被驱逐后，美国务院澄清：美方并未驱逐，该官员应是任期届满轮调](/articles/voa/1012834.md)
 
 9-5 [香港海防博物馆更名抗战 专家: 中共改写历史美化自己](/articles/voa/1012835.md)
@@ -596,8 +600,4 @@
 8-23 [赖清德上任后首访金门，呼吁团结抵抗中国威胁](/articles/voa/1013130.md)
 
 8-23 [中欧贸易紧张之际北京讨论提高大排量燃油车的进口关税](/articles/voa/1013131.md)
-
-8-23 [哈里斯接受民主党总统候选人提名 呼吁结束加沙战争和打击暴政](/articles/voa/1013132.md)
-
-8-23 [美国民主党全国代表大会落幕 中国议题占几何？](/articles/voa/1013133.md)
 
