--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-5 [推特上的中国：中国驻纽约总领事离职以及孙雯案将如何影响美中关系？](/articles/voa/1012823.md)
+
 9-5 [专家：和中国打交道，非洲需要更有战略性和纪律性](/articles/voa/1012824.md)
 
 9-5 [中国驳斥美国检方对前纽约州长助理孙雯的指控，起底孙雯及其与中国的关系](/articles/voa/1012825.md)
@@ -598,6 +600,4 @@
 8-24 [英国首相斯塔默与习近平通话，强调双方要“坦诚”对话](/articles/voa/1013121.md)
 
 8-24 [哈里斯成为民主党总统候选人，中国学界民间看好](/articles/voa/1013122.md)
-
-8-23 [莫迪会见泽连斯基，呼吁俄乌尽早对话](/articles/voa/1013123.md)
 
