--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-5 [“润”的新选择：对中国新移民而言，日本或比美国更具吸引力](/articles/voa/1012822.md)
+
 9-5 [推特上的中国：中国驻纽约总领事离职以及孙雯案将如何影响美中关系？](/articles/voa/1012823.md)
 
 9-5 [专家：和中国打交道，非洲需要更有战略性和纪律性](/articles/voa/1012824.md)
@@ -598,6 +600,4 @@
 8-24 [美司法部：一名佛州电信和信息技术工作者对串谋充当中国代理人的指控认罪](/articles/voa/1013120.md)
 
 8-24 [英国首相斯塔默与习近平通话，强调双方要“坦诚”对话](/articles/voa/1013121.md)
-
-8-24 [哈里斯成为民主党总统候选人，中国学界民间看好](/articles/voa/1013122.md)
 
