--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+9-5 [盐水鸭、名牌、百万报酬：孙雯“中国代理人”案细节曝光](/articles/nyt/1042409.md)
+
 9-5 [日本告别超低房贷利率时代](/articles/nyt/1042410.md)
 
 9-5 [当虚假信息和阴谋论开始在左派中流传](/articles/nyt/1042411.md)
@@ -598,6 +600,4 @@
 6-4 [“肮脏挑衅”：关于朝鲜投放的垃圾气球，你需要了解的](/articles/nyt/1042707.md)
 
 6-4 [在持续动荡的世界，我们如何应对“供应链大混乱”](/articles/nyt/1042708.md)
-
-6-4 [北京指英国MI6策反中国公务员夫妇从事间谍活动](/articles/nyt/1042709.md)
 
