--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-5 [习近平承诺未来三年向非洲提供逾500亿美元资金、创造百万就业机会](/articles/voa/1012820.md)
+
 9-5 [消息人士称拜登接近阻止日本制铁收购美国钢铁公司](/articles/voa/1012821.md)
 
 9-5 [“润”的新选择：对中国新移民而言，日本或比美国更具吸引力](/articles/voa/1012822.md)
@@ -598,6 +600,4 @@
 8-24 [路透社：中国实体寻求从亚马逊云及其竞争对手处获取高端美国芯片和人工智能](/articles/voa/1013118.md)
 
 8-24 [白宫：加沙停火谈判取得进展](/articles/voa/1013119.md)
-
-8-24 [美司法部：一名佛州电信和信息技术工作者对串谋充当中国代理人的指控认罪](/articles/voa/1013120.md)
 
