--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+9-5 [联合国秘书长称非洲无法充分获得债务减免将导致社会动荡](/articles/voa/1012817.md)
+
+9-5 [超级台风“摩羯”携狂风暴雨逼近中国南部](/articles/voa/1012818.md)
+
+9-5 [教宗方济各访问东南亚最大清真寺并呼吁共同应对气候变化](/articles/voa/1012819.md)
+
 9-5 [习近平承诺未来三年向非洲提供逾500亿美元资金、创造百万就业机会](/articles/voa/1012820.md)
 
 9-5 [消息人士称拜登接近阻止日本制铁收购美国钢铁公司](/articles/voa/1012821.md)
@@ -594,10 +600,4 @@
 8-24 [乌克兰独立日前夕，美国制裁支持俄侵乌的数百家实体，包括42家中国公司](/articles/voa/1013115.md)
 
 8-24 [乌克兰独立日前夕，美国宣布向基辅提供1.25亿美元新军援](/articles/voa/1013116.md)
-
-8-24 [新西兰官员：西方对太平洋岛屿的忽视让其他国家增强了其影响力](/articles/voa/1013117.md)
-
-8-24 [路透社：中国实体寻求从亚马逊云及其竞争对手处获取高端美国芯片和人工智能](/articles/voa/1013118.md)
-
-8-24 [白宫：加沙停火谈判取得进展](/articles/voa/1013119.md)
 
