--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-5 [日澳誓言强化军事合作，应对北京在印太热点地区的威胁](/articles/voa/1012815.md)
+
+9-5 [马来西亚总理安瓦尔表态：不会因北京抗议就停止南中国海油气勘探](/articles/voa/1012816.md)
+
 9-5 [联合国秘书长称非洲无法充分获得债务减免将导致社会动荡](/articles/voa/1012817.md)
 
 9-5 [超级台风“摩羯”携狂风暴雨逼近中国南部](/articles/voa/1012818.md)
@@ -596,8 +600,4 @@
 8-24 [独立第三方总统候选人小罗伯特·肯尼迪暂停竞选，转而支持特朗普](/articles/voa/1013113.md)
 
 8-24 [中国开放首批游客赴马祖观光，学者：北京试图施惠国民党并证明民进党非两岸可靠伙伴](/articles/voa/1013114.md)
-
-8-24 [乌克兰独立日前夕，美国制裁支持俄侵乌的数百家实体，包括42家中国公司](/articles/voa/1013115.md)
-
-8-24 [乌克兰独立日前夕，美国宣布向基辅提供1.25亿美元新军援](/articles/voa/1013116.md)
 
