--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+9-5 [“润学”的尽头是美国？还是日本？](/articles/dw/1024374.md)
+
 9-5 [习近平承诺向非洲提供3600亿元人民币资金支持](/articles/dw/1024375.md)
 
 9-5 [纳粹时代后首次:极右政党在德国东部创新高](/articles/dw/1024376.md)
@@ -598,6 +600,4 @@
 8-6 [「冷狗」：不用烘焙的德國特色甜點](/articles/dw/1024672.md)
 
 8-6 [无视邻国担忧，柬埔寨开启中国资助运河项目](/articles/dw/1024673.md)
-
-8-6 [并不轻松的意大利海滩救生员](/articles/dw/1024674.md)
 
