--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-5 [中国经济艰难之际 习近平承诺援非3600亿人民币](/articles/voa/1012814.md)
+
 9-5 [日澳誓言强化军事合作，应对北京在印太热点地区的威胁](/articles/voa/1012815.md)
 
 9-5 [马来西亚总理安瓦尔表态：不会因北京抗议就停止南中国海油气勘探](/articles/voa/1012816.md)
@@ -598,6 +600,4 @@
 8-24 [鲍威尔：美联储很快开始降息的“时机已经到来”](/articles/voa/1013112.md)
 
 8-24 [独立第三方总统候选人小罗伯特·肯尼迪暂停竞选，转而支持特朗普](/articles/voa/1013113.md)
-
-8-24 [中国开放首批游客赴马祖观光，学者：北京试图施惠国民党并证明民进党非两岸可靠伙伴](/articles/voa/1013114.md)
 
