--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-6 [亨特·拜登对联邦税务指控认罪，称不想让家人再承受痛苦](/articles/voa/1012796.md)
+
+9-6 [北京为何会对纽约州政府一位中层助理感兴趣？](/articles/voa/1012797.md)
+
 9-6 [美司法部宣布：俄罗斯第一频道主播因违反对俄制裁而被起诉](/articles/voa/1012798.md)
 
 9-6 [赖清德上任百日美如何评价？专家：北京仍竭力在美国将其界定为“麻烦制造者”](/articles/voa/1012799.md)
@@ -596,8 +600,4 @@
 8-25 [禾赛美国“维权”成功，中微效仿，美国防部证明中企“涉军”为何困难重重？](/articles/voa/1013094.md)
 
 8-25 [苏丹军方首领不会参加苏丹和平谈判，誓言“将战斗一百年”](/articles/voa/1013095.md)
-
-8-25 [埃及停火谈判之前，以色列空袭在加沙打死几十人](/articles/voa/1013096.md)
-
-8-25 [巴基斯坦部长：与中国公司的发电合同需要审议](/articles/voa/1013097.md)
 
