--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+9-6 [观人随笔｜让我感到羞愧的，不是中国足球](/articles/cdt/337366.md)
+
 9-6 [每日一语 2024.9.5](/articles/cdt/337369.md)
 
 9-6 [【旧文重温】学习小组｜中国足球有救了！习近平谈足球改革](/articles/cdt/337371.md)
@@ -598,6 +600,4 @@
 7-31 [【CDTV】湖南新化县一座天桥上再度出现“四通桥标语”](/articles/cdt/338416.md)
 
 7-30 [近距离2｜借胡锡进被“进盐”的机会，和他聊一聊“道德”问题](/articles/cdt/338418.md)
-
-7-30 [剑客写字的地方｜“网号”“网证”来了，一点个人看法](/articles/cdt/338421.md)
 
