--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+9-6 [对人工智能的痴迷可能导致民主的终结](/articles/nyt/1042407.md)
+
 9-5 [中非合作论坛：习近平打造“发展中国家捍卫者”形象](/articles/nyt/1042408.md)
 
 9-5 [盐水鸭、名牌、百万报酬：孙雯“中国代理人”案细节曝光](/articles/nyt/1042409.md)
@@ -598,6 +600,4 @@
 6-5 [为什么说新冠病毒可能是从武汉病毒研究所泄漏的](/articles/nyt/1042705.md)
 
 6-4 [《大纪元时报》高管涉嫌洗钱在美国被捕](/articles/nyt/1042706.md)
-
-6-4 [“肮脏挑衅”：关于朝鲜投放的垃圾气球，你需要了解的](/articles/nyt/1042707.md)
 
