--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -27,6 +27,8 @@
 
 9-5 [那个NG｜谷爱凌：从天才少女到双面人“谷圣”](/articles/cdt/337380.md)
 
+9-6 [【CDT报告汇】美国大选在即，中共利用虚假账号挑拨两党选民左右互搏 （外二篇）](/articles/cdt/337381.md)
+
 9-5 [唐师三百手｜第一次课，讲到了被封号的贞观文章](/articles/cdt/337383.md)
 
 9-4 [洞见报告｜“贞观”公众号被封禁了，我担心的事发生了](/articles/cdt/337397.md)
@@ -598,6 +600,4 @@
 7-31 [猛犸工作室｜被传销的县城老人：逃不开人情，躲不过套路](/articles/cdt/338392.md)
 
 7-31 [【旧文重温】胡文辉｜历史的垃圾时间，文化的悠长假期](/articles/cdt/338396.md)
-
-7-31 [每日一语 2024.7.30](/articles/cdt/338398.md)
 
