--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+9-6 [德企在中国投资研发热情不减](/articles/dw/1024366.md)
+
 9-6 [中国绿能产品产能过剩？非洲正需要](/articles/dw/1024367.md)
 
 9-6 [中国国足:辜负了总书记的期望](/articles/dw/1024368.md)
@@ -598,6 +600,4 @@
 8-7 [孟加拉国临时领导人：诺贝尔和平奖得主尤努斯](/articles/dw/1024664.md)
 
 8-7 [国泰航空宣布购买至少30架空客A330-900飞机](/articles/dw/1024665.md)
-
-8-7 [“咖喱香肠”为何能成为德国国民小吃？](/articles/dw/1024666.md)
 
