--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-7 [号称“中国辉达”的象帝先裁员重组，分析: 美中芯片战加剧中国困局](/articles/voa/1012780.md)
+
+9-7 [中非论坛落幕 刚果希望满满 北京的承诺能兑现吗？](/articles/voa/1012781.md)
+
 9-7 [韩国三星前高管因涉嫌盗窃公司芯片技术给中国再次被捕](/articles/voa/1012782.md)
 
 9-7 [德国海军少将称要维护印太海洋通道安全，但不愿证实德国舰艇是否将过航台海](/articles/voa/1012783.md)
@@ -596,8 +600,4 @@
 8-26 [太空竞赛前沿战场：一次看懂美中卫星竞争](/articles/voa/1013078.md)
 
 8-26 [以色列：更多的脊髓灰质炎疫苗运抵加沙，分发不确定](/articles/voa/1013079.md)
-
-8-26 [联合国谴责塔利班道德法律是阿富汗“令人痛心的前景”](/articles/voa/1013080.md)
-
-8-26 [安全消息人士：以色列依靠情报先发制人攻击真主党](/articles/voa/1013081.md)
 
