--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-7 [美国台湾裔团体谴责中国渗透美政府机构,称遭起诉的前纽约州雇员孙雯阻挠美台增进关系](/articles/voa/1012771.md)
+
+9-7 [易富贤：中国禁止国际领养儿童的背后](/articles/voa/1012772.md)
+
 9-7 [大多数安理会成员国联合谴责塔利班道德法，中俄缺席](/articles/voa/1012773.md)
 
 9-7 [乌克兰总统泽连斯基向盟友强调保持军事实力的必要性](/articles/voa/1012774.md)
@@ -596,8 +600,4 @@
 8-26 [中国饶舌歌手以“中国台北”矮化台湾，被禁在台北举办演唱会](/articles/voa/1013069.md)
 
 8-26 [中国军用飞机首次侵犯日本领空，日本紧急起飞战机应对](/articles/voa/1013070.md)
-
-8-26 [美国产业界寻求缓解拜登政府对中国大幅加征的关税](/articles/voa/1013071.md)
-
-8-26 [巴基斯坦俾路支省发生多起武装袭击事件 已造成33人死亡](/articles/voa/1013072.md)
 
