--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+9-7 [伊朗据报道已经或即将向俄罗斯转让弹道导弹，白宫对此表示“震惊”](/articles/voa/1012768.md)
+
+9-7 [“中共已经进门了”--从孙雯案看中共对美国渗透之深](/articles/voa/1012769.md)
+
+9-7 [选举日越来越近，美国对手加速施加影响](/articles/voa/1012770.md)
+
 9-7 [美国台湾裔团体谴责中国渗透美政府机构,称遭起诉的前纽约州雇员孙雯阻挠美台增进关系](/articles/voa/1012771.md)
 
 9-7 [易富贤：中国禁止国际领养儿童的背后](/articles/voa/1012772.md)
@@ -594,10 +600,4 @@
 8-26 [伊朗称将对哈马斯领导人在德黑兰被杀一事作出“精准的”回应](/articles/voa/1013066.md)
 
 8-26 [澳大利亚参议院通过决议挺台湾 专家：反映主流民意](/articles/voa/1013067.md)
-
-8-26 [中国消费降级重创 鼎泰丰华北14家门市将吹熄灯号](/articles/voa/1013068.md)
-
-8-26 [中国饶舌歌手以“中国台北”矮化台湾，被禁在台北举办演唱会](/articles/voa/1013069.md)
-
-8-26 [中国军用飞机首次侵犯日本领空，日本紧急起飞战机应对](/articles/voa/1013070.md)
 
