--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+9-7 [猛犸工作室｜月薪三万的陆家嘴打工人，抠抠搜搜](/articles/cdt/337324.md)
+
 9-7 [剑客写字的地方｜底层互害，越来越魔幻了](/articles/cdt/337330.md)
 
 9-7 [忘川边的但丁｜国足这0比7，让我想起李鸿章的“看足球之问”](/articles/cdt/337337.md)
@@ -598,6 +600,4 @@
 8-1 [新新默存｜温克坚：举债的艺术](/articles/cdt/338374.md)
 
 8-1 [【404文库】阿喀琉斯与龟｜我担心哪天我的上网证被吊销了](/articles/cdt/338375.md)
-
-8-1 [【敏感词库】网号网证要来了、网络身份证要来了](/articles/cdt/338376.md)
 
