--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-7 [伊朗若成功拥核，中国“功不可没”，而美国或被赶出中东？](/articles/voa/1012759.md)
+
 9-7 [中国无力支薪网格员 分析：但维稳力度绝不放松](/articles/voa/1012760.md)
 
 9-7 [世界媒体看中国: 习近平有多英明](/articles/voa/1012761.md)
@@ -598,6 +600,4 @@
 8-27 [美国认为以色列仍受到伊朗及其代理人的“攻击威胁”](/articles/voa/1013057.md)
 
 8-27 [日本国会亲中团体访华 专家: 效果恐有限](/articles/voa/1013058.md)
-
-8-27 [聿文视界: 中国内部溃烂的状态评估](/articles/voa/1013059.md)
 
