--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-8 [也门胡塞武装声称再击落一架美国MQ-9“死神”无人机](/articles/voa/1012745.md)
+
+9-8 [土耳其埃尔多安呼吁伊斯兰国家结盟对抗以色列](/articles/voa/1012746.md)
+
 9-8 [朝鲜持续增强海军力量的同时 美韩核磋商小组进行首次兵棋模拟训练](/articles/voa/1012747.md)
 
 9-8 [联合国推进加沙地带疫苗接种之际 以色列的袭击在48小时内造成61人死亡](/articles/voa/1012748.md)
@@ -596,8 +600,4 @@
 8-27 [菲律宾称中国是地区和平的“最大破坏者”](/articles/voa/1013043.md)
 
 8-27 [日本政府：中国军机侵犯领空完全不可接受](/articles/voa/1013044.md)
-
-8-27 [乌干达拘留21名抗议石油项目并游行走向中国大使馆的环保人士](/articles/voa/1013045.md)
-
-8-27 [特别检察官要求法院恢复对特朗普文件案的指控](/articles/voa/1013046.md)
 
