--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+9-9 [正面连接｜我与权力的距离](/articles/cdt/337300.md)
+
+9-9 [【404文库】老干体v｜上半年财政缺口5.7万亿，8000万公职嗷嗷待哺，监委南下「远洋捕捞」](/articles/cdt/337303.md)
+
 9-9 [每日一语 2024.9.8](/articles/cdt/337305.md)
 
 9-9 [【404文库】“砸了今日锅，去还昨日债，谁为明日忧？”（外二篇）](/articles/cdt/337309.md)
@@ -596,8 +600,4 @@
 8-3 [法规指南｜创纪录的寻衅滋事案：内蒙11牧民维权被抓，开庭93天仍未审结](/articles/cdt/338328.md)
 
 8-3 [有马体育｜伤中泳：中国游泳队疑云](/articles/cdt/338330.md)
-
-8-3 [每日一语 2024.8.2](/articles/cdt/338333.md)
-
-8-2 [现代快报｜烟草局招聘被质疑“萝卜坑”，官方回应“是企业实际需要”](/articles/cdt/338342.md)
 
