--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+9-9 [美媒：秦刚被任命出版社低阶职务](/articles/dw/1024345.md)
+
+9-9 [1972慕尼黑惨案周年之际 一名枪手被击毙](/articles/dw/1024346.md)
+
 9-9 [招手外商救經濟？中國放寬製造與醫療業限制](/articles/dw/1024347.md)
 
 9-8 [媒体：美国相信伊朗向俄罗斯转让了短程弹道导弹](/articles/dw/1024348.md)
@@ -596,8 +600,4 @@
 8-9 [从骚乱到”和平之夜“——英国暴力杀人事件后发生了什么？](/articles/dw/1024643.md)
 
 8-9 [参与策划泰勒·斯威夫特恐袭案第三名嫌疑人在维也纳被捕](/articles/dw/1024644.md)
-
-8-9 [媒体：一名加拿大人涉嫌为中国从事间谍活动](/articles/dw/1024645.md)
-
-8-9 [盗卖人体尸骨 中国多地殡仪馆涉案](/articles/dw/1024646.md)
 
