--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+9-9 [中国农村“外嫁女”如何争取土地权益](/articles/nyt/1042401.md)
+
 9-9 [美国是时候加大对核武库的投资了](/articles/nyt/1042402.md)
 
 9-9 [“一个时代的终结”：中国不再允许外国家庭收养中国儿童](/articles/nyt/1042403.md)
@@ -598,6 +600,4 @@
 6-6 [欧洲经济为何无力与美中竞争](/articles/nyt/1042699.md)
 
 6-6 [中国政府拯救楼市的做法惹恼了谁](/articles/nyt/1042700.md)
-
-6-6 [“五眼联盟”警告前战斗机飞行员不要帮助培训解放军](/articles/nyt/1042701.md)
 
