--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-10 [美国国会复会进入“中国周” 众院本周将表决多项中国相关法案](/articles/voa/1012716.md)
+
 9-10 [台湾联合国协进会赴美 吁联大讨论“2758号决议”的“一中”问题](/articles/voa/1012717.md)
 
 9-10 [路透调查：中国八月份出口受全球需求疲软及关税影响进一步减缓](/articles/voa/1012718.md)
@@ -598,6 +600,4 @@
 8-28 [人权律师余文生“煽颠”案开庭 王宇等多人“被维稳驱离”无法旁听](/articles/voa/1013014.md)
 
 8-28 [达赖喇嘛在美国接受膝关节置换手术后返回印度](/articles/voa/1013015.md)
-
-8-28 [美国进口中国“地沟油”将创新高 未来前景不明](/articles/voa/1013016.md)
 
