--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+9-10 [桑切斯在北京会晤习近平，寻求缓解欧中贸易纠纷](/articles/voa/1012705.md)
+
+9-10 [柯文哲深陷贪腐争议，有学者认为民众党若泡沫化北京会失望](/articles/voa/1012706.md)
+
+9-10 [美国会“中国周”审议《生物安全法案》：速览几大要点](/articles/voa/1012707.md)
+
+9-10 [联合国表示愿意监督最终可能达成的加沙停火](/articles/voa/1012708.md)
+
 9-10 [中国宣布本月将与俄罗斯进行海空联合演习](/articles/voa/1012709.md)
 
 9-10 [推特上的中国：秦刚被贬到出版社？是“诗意的公正”还是中共体系黑暗无常？](/articles/voa/1012710.md)
@@ -592,12 +600,4 @@
 8-29 [在西方面临障碍，中国在非洲峰会上推动绿色产品](/articles/voa/1013003.md)
 
 8-29 [普京面临乌克兰突然进攻的“影响”](/articles/voa/1013004.md)
-
-8-29 [英国政府搁置《高等教育(言论自由)法》被起诉 原告认为中国利益是关键因素](/articles/voa/1013005.md)
-
-8-29 [人权观察敦促联合国及全球持续要求中国政府停止在新疆的反人类罪行](/articles/voa/1013006.md)
-
-8-29 [“北京自己人”、澳门前终审法院院长岑浩辉宣布“参选”澳门特首](/articles/voa/1013007.md)
-
-8-29 [乌克兰无人机击中俄油库，并远程袭击1500公里外目标](/articles/voa/1013008.md)
 
