--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+9-10 [星球商业评论｜传音不过山海关](/articles/cdt/337241.md)
+
 9-9 [每日一语 2024.9.9](/articles/cdt/337249.md)
 
 9-9 [观人随笔｜他死了，没有然后](/articles/cdt/337254.md)
@@ -598,6 +600,4 @@
 8-5 [兽楼处｜一个复杂市场的消费者](/articles/cdt/338286.md)
 
 8-5 [每日一语 2024.8.4](/articles/cdt/338289.md)
-
-8-5 [莽莽｜港狱虹援：铁窗内外的跨儿行动者](/articles/cdt/338290.md)
 
