--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+9-10 [金正恩誓言要和美国打核战争](/articles/dw/1024336.md)
+
+9-10 [欧洲竞争报告中的中国因素](/articles/dw/1024337.md)
+
+9-10 [德国政界激辩移民政策 内政部长下令全面临时边境检查](/articles/dw/1024338.md)
+
 9-10 [巴黎2024——残奥会带来的感动](/articles/dw/1024339.md)
 
 9-10 [人权观察联手艾未未推出新作义卖](/articles/dw/1024340.md)
@@ -594,10 +600,4 @@
 8-11 [阿拉伯国家在哈马斯与以色列的冲突中持怎样的态度？](/articles/dw/1024634.md)
 
 8-10 [俄罗斯：库尔斯克核电站发现弹片 多地启动反恐行动](/articles/dw/1024635.md)
-
-8-10 [朝鲜将逾万名灾民迁往首都安置](/articles/dw/1024636.md)
-
-8-10 [印尼：对“中国制造”说不](/articles/dw/1024637.md)
-
-8-10 [以色列空袭加沙一学校 哈马斯称逾百人丧生](/articles/dw/1024638.md)
 
