--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,12 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+9-10 [冰川思享号｜全国最知名烂尾楼，正在“浴火重生”](/articles/cdt/337228.md)
+
+9-10 [澎湃新闻｜“央视今晚还是不转播国足比赛”](/articles/cdt/337231.md)
+
+9-10 [【404帖子】穗城流年｜一位身着美团服装的外卖骑手举牌呼吁](/articles/cdt/337237.md)
+
 9-10 [星球商业评论｜传音不过山海关](/articles/cdt/337241.md)
 
 9-9 [每日一语 2024.9.9](/articles/cdt/337249.md)
@@ -594,10 +600,4 @@
 8-5 [维舟｜运动员不是夺金的工具人](/articles/cdt/338277.md)
 
 8-5 [【404帖子】黄裕生｜真正的现代化国家绝对不是“编户齐民”的国家](/articles/cdt/338280.md)
-
-8-5 [北青深一度｜举报导师失范的陕师大女生：短短的4天、漫长的7年](/articles/cdt/338285.md)
-
-8-5 [兽楼处｜一个复杂市场的消费者](/articles/cdt/338286.md)
-
-8-5 [每日一语 2024.8.4](/articles/cdt/338289.md)
 
