--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-11 [布林肯访英期间宣布因伊朗向俄提供弹道导弹而对其实施新制裁，并批评中国支持普京侵乌](/articles/voa/1012684.md)
+
 9-11 [布林肯和拉米在美英对话中强调台海现状的重要性](/articles/voa/1012685.md)
 
 9-11 [加拿大释放将对中国科技产品和关键矿物进一步加征关税的信号](/articles/voa/1012686.md)
@@ -598,6 +600,4 @@
 8-29 [中国初裁欧盟对华出口白兰地存在倾销，但暂不采取临时反倾销措施](/articles/voa/1012982.md)
 
 8-29 [习近平会见沙利文，吁美中相向而行 官媒盼美“读懂中国”](/articles/voa/1012983.md)
-
-8-29 [习近平会见沙利文，双方强调愿意继续努力稳定双边关系](/articles/voa/1012984.md)
 
