--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+9-11 [华为推出三折叠屏手机Mate XT，售价19999元起](/articles/nyt/1042396.md)
+
 9-10 [特朗普是如何在辩论中攻击、诋毁女性的](/articles/nyt/1042397.md)
 
 9-10 [与贺锦丽辩论，特朗普将咆哮着走向失败](/articles/nyt/1042398.md)
@@ -598,6 +600,4 @@
 6-7 [强人领袖遇挫，全球选举年政治现状大洗牌？](/articles/nyt/1042694.md)
 
 6-7 [诺曼底登陆80周年：新的战争阴云下，我们在纪念什么](/articles/nyt/1042695.md)
-
-6-7 [美国恢复对东南亚太阳能产品征收关税，剑指中国](/articles/nyt/1042696.md)
 
