--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,7 +3,13 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+9-11 [【旧文重温】兽楼处｜送养公告收集者的二十年](/articles/cdt/337196.md)
+
+9-11 [老牌恶棍｜国足输了，中国却赢麻了](/articles/cdt/337204.md)
+
 9-11 [极昼工作室｜货车司机死亡后，剩下的最后700公里](/articles/cdt/337207.md)
+
+9-11 [【麻辣总局】人民日报｜一将无能累死三军，该有人出来担责了](/articles/cdt/337208.md)
 
 9-11 [【404文库】亮见｜祥子累死在了车上](/articles/cdt/337210.md)
 
@@ -594,10 +600,4 @@
 8-7 [【404文库】法度Law｜唐山通报后，实名举报的原警察再次发声](/articles/cdt/338214.md)
 
 8-7 [【404媒体】“她们本不该成为被牺牲的那部分，没有人理应成为被牺牲的那部分”(外二篇）](/articles/cdt/338221.md)
-
-8-7 [【404文库】知灼｜唐山打人事件原出警民警实名举报自己遭强行定罪 ：官方连夜公布调查结论](/articles/cdt/338225.md)
-
-8-7 [【404文库】辛庄课堂｜刘瑜：委内瑞拉这个国家是如何毁掉的？](/articles/cdt/338241.md)
-
-8-7 [建设性意见｜山东省属事业单位收回编制，步子可以迈得再大一点](/articles/cdt/338243.md)
 
