--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-12 [台湾幻影2000战机坠毁，军事专家：难敌中共空军 急需汰换](/articles/voa/1012662.md)
+
+9-12 [印度政府下令提高中国和越南某些钢铁产品关税12-30%，减缓其输入速度](/articles/voa/1012663.md)
+
 9-12 [华盛顿升级对北京的批评，首次指责中国直接强化俄罗斯战争机器](/articles/voa/1012664.md)
 
 9-12 [苹果、华为手机“争霸” 分析：iPhone16在华面临挑战大](/articles/voa/1012665.md)
@@ -596,8 +600,4 @@
 8-30 [路透社：俄罗斯与中国合作伙伴的支付障碍在八月加剧](/articles/voa/1012960.md)
 
 8-30 [南中国海紧张升温之际 菲律宾与越南同意深化军事与防务关系](/articles/voa/1012961.md)
-
-8-30 [太平洋岛国领导人拒绝北京切断与台湾关系的呼吁，延续与台北接触政策](/articles/voa/1012962.md)
-
-8-30 [台风“珊珊”席卷日本各地带来暴雨引发交通混乱](/articles/voa/1012963.md)
 
