--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+9-12 [曾任田纳西州联邦参议员和美国驻华大使的尚慕杰逝世](/articles/voa/1012656.md)
+
+9-12 [美国对华出口管制层层加码，新一轮措施全面升级防堵漏洞](/articles/voa/1012657.md)
+
+9-12 [美国宣布将向乌克兰提供超过7亿美元的新援助](/articles/voa/1012658.md)
+
 9-12 [全球首座刘晓波铜像落户爱尔兰高威大学 历经多方压力终获成功](/articles/voa/1012659.md)
 
 9-12 [澳洲智库报告：中国取代美国 在关键技术研究方面处于领先地位](/articles/voa/1012660.md)
@@ -594,10 +600,4 @@
 8-30 [国际失踪者日:台湾出版人富察上海遭捕逾500日，台湾民团吁中国确保人权](/articles/voa/1012954.md)
 
 8-30 [毛泽东前秘书李锐日记归属案继续审理中,专家证人陈述中共是否插手](/articles/voa/1012955.md)
-
-8-30 [中国推“房屋养老金”惹众怒 分析：政策恐拖垮房市](/articles/voa/1012956.md)
-
-8-30 [乌克兰空军司令：美国专家加入F-16战机坠毁原因调查](/articles/voa/1012957.md)
-
-8-30 [台湾国防部：解放军对台压力加大，但并不具备全面入侵的能力](/articles/voa/1012958.md)
 
