--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,12 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+9-12 [六神磊磊读金庸｜ 足球是一个逆子](/articles/cdt/337165.md)
+
+9-12 [建设性意见｜起诉微信勇气可嘉，但提现收费的另有其人啊同学](/articles/cdt/337169.md)
+
+9-12 [三辉图书｜高墙内，一颗鸡蛋的自白](/articles/cdt/337173.md)
+
 9-12 [大象公社｜关于中国足球，说几句阅后即焚的话](/articles/cdt/337177.md)
 
 9-12 [知识分子｜揭秘“人骨工厂”，医学需求如何催生地下罪恶产业？](/articles/cdt/337179.md)
@@ -594,10 +600,4 @@
 8-8 [稻草和飞花｜哈西娜的最后几个小时](/articles/cdt/338192.md)
 
 8-8 [每日一语 2024.8.7](/articles/cdt/338194.md)
-
-8-8 [每日一语 2024.8.6](/articles/cdt/338197.md)
-
-8-8 [老牌恶棍｜如何看待网络举报？我的建议是直接申遗](/articles/cdt/338199.md)
-
-8-7 [现实的模样｜网络举报，成了这世道的“救命稻草”](/articles/cdt/338202.md)
 
