--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+9-12 [为什么肖尔茨总理突然呼吁尽快实现乌克兰和平？](/articles/dw/1024319.md)
+
 9-12 [DW专访孟加拉临时领导人尤努斯](/articles/dw/1024320.md)
 
 9-12 [駐美經貿辦恐失去特權 對香港影響幾何？](/articles/dw/1024321.md)
@@ -598,6 +600,4 @@
 8-12 [客座评论：是为了官方利益还是真正的户籍制度改革？](/articles/dw/1024617.md)
 
 8-12 [2024年巴黎奥运会：闭幕式的精彩瞬间](/articles/dw/1024618.md)
-
-8-12 [跨越边界 乌克兰突袭库尔斯克](/articles/dw/1024619.md)
 
