--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-12 [布林肯访问波兰，乌能否使用西方远程武器打击俄纵深目标仍是悬念](/articles/voa/1012642.md)
+
+9-12 [泽连斯基称中国与巴西提出的和平建议具有“破坏性”](/articles/voa/1012643.md)
+
 9-12 [本田中国关厂大裁员，观察:下一波恐日系德系车企撤出](/articles/voa/1012644.md)
 
 9-12 [中国指示电动车厂家确保关键技术留在国内，避免在土印等国投资](/articles/voa/1012645.md)
@@ -596,8 +600,4 @@
 8-31 [北约秘书长支持乌克兰基于自卫而攻入俄罗斯库尔斯克](/articles/voa/1012940.md)
 
 8-31 [美国贸易代表办公室推迟对中国关税的最终决定](/articles/voa/1012941.md)
-
-8-31 [特朗普前国安顾问:特朗普最大成就或许是促成美国人就中共威胁达成共识](/articles/voa/1012942.md)
-
-8-31 [F-16坠毁后，泽连斯基将乌空军司令撤职](/articles/voa/1012943.md)
 
