--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,7 +3,13 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+9-13 [孙立平｜过剩产能出清之日，就是真正拐点到来之时](/articles/cdt/337153.md)
+
 9-13 [每日一语 2024.9.12](/articles/cdt/337154.md)
+
+9-13 [冷杉RECORD｜滞销书背后：没有理想的人不伤心](/articles/cdt/337155.md)
+
+9-13 [世界音乐｜被剥夺说话权的阿富汗女人，正在用歌声回击这一切…](/articles/cdt/337156.md)
 
 9-13 [ida｜一个公众号的倒掉](/articles/cdt/337161.md)
 
@@ -594,10 +600,4 @@
 8-8 [【旧文重温】记者刘向南｜我在两广采访“殡葬官员组织倒卖尸体案”](/articles/cdt/338178.md)
 
 8-8 [知灼｜起底倒卖4000具尸体操控者李宝兴：资深科研教授，曾获“全国劳模”称号](/articles/cdt/338182.md)
-
-8-8 [看理想｜“网络身份证”最大的问题是什么？](/articles/cdt/338184.md)
-
-8-8 [木蹊说｜禁掉“掼蛋之风”，这世界就好了吗？](/articles/cdt/338186.md)
-
-8-8 [衣者朝新｜劳东燕：法律与新闻不可能长期处于低谷](/articles/cdt/338191.md)
 
