--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+9-13 [没有性生活的婚姻可能幸福吗](/articles/nyt/1042386.md)
+
 9-13 [前CIA官员因向中国政府提供机密信息获刑10年](/articles/nyt/1042387.md)
 
 9-13 [韩国深伪色情犯罪激增，厌女文化助长网络性暴力](/articles/nyt/1042388.md)
@@ -598,6 +600,4 @@
 6-12 [美国小提琴家卡罗尔去世，文革中“破冰”访华](/articles/nyt/1042684.md)
 
 6-12 [5亿包辛拉面和H Mart们的崛起：亚洲超市如何重塑美国](/articles/nyt/1042685.md)
-
-6-12 [一个被判有罪的儿子对拜登意味着什么](/articles/nyt/1042686.md)
 
