--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+9-13 [籲車企不投資海外 北京稱電動車談判不讓步](/articles/dw/1024313.md)
+
+9-13 [“我们一共16个人，他们给我们10块面包”](/articles/dw/1024314.md)
+
 9-12 [包凡“失联”一年半 华兴资本向“有关部门”支付7800万难入帐](/articles/dw/1024315.md)
 
 9-12 [欧中电动车关税谈判在即 西班牙突然转向](/articles/dw/1024316.md)
@@ -596,8 +600,4 @@
 8-12 [黎志英案 香港终审法院驳回上诉](/articles/dw/1024611.md)
 
 8-12 [德法英三国呼吁中东“立即停火“](/articles/dw/1024612.md)
-
-8-12 [专访：兴奋剂问题遍全球 但中国更具系统性](/articles/dw/1024613.md)
-
-8-12 [宁波港船只猛烈爆炸  集装箱瞬间变火球](/articles/dw/1024614.md)
 
