--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+9-13 [报告称WADA未“偏袒”中国，但指中国反兴奋剂机构违规](/articles/nyt/1042384.md)
+
 9-13 [众议院共和党人为何在大选前频繁对抗中国](/articles/nyt/1042385.md)
 
 9-13 [没有性生活的婚姻可能幸福吗](/articles/nyt/1042386.md)
@@ -598,6 +600,4 @@
 6-13 [欧盟宣布对中国电动汽车征收额外关税，最高达38%](/articles/nyt/1042682.md)
 
 6-13 [美国已不是世界老大](/articles/nyt/1042683.md)
-
-6-12 [美国小提琴家卡罗尔去世，文革中“破冰”访华](/articles/nyt/1042684.md)
 
