--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+9-13 [中国批准从2025年1月起提高退休年龄的计划](/articles/voa/1012619.md)
+
+9-13 [俄罗斯军机环绕日本 日战机紧急升空应对](/articles/voa/1012620.md)
+
+9-13 [德国军舰罕见通过敏感的台湾海峡](/articles/voa/1012621.md)
+
 9-13 [中国、俄罗斯在北京香山论坛上明批暗讽西方](/articles/voa/1012622.md)
 
 9-13 [朝鲜领导人金正恩视察铀浓缩设施，呼吁增加武器生产](/articles/voa/1012623.md)
@@ -594,10 +600,4 @@
 9-1 [俄称莫斯科附近炼油厂和发电厂遇袭，基辅承认乌东前线乌军处境“困难”](/articles/voa/1012917.md)
 
 9-1 [泰国饱受中国价格战及不法活动双重冲击](/articles/voa/1012918.md)
-
-9-1 [中国市场: 从在华外国传统汽车厂商的金矿到亏损的“黑洞”](/articles/voa/1012919.md)
-
-9-1 [以色列在加沙寻获6名人质尸体 包括一名以色列裔美国人](/articles/voa/1012920.md)
-
-9-1 [教宗将展开具挑战性的亚太之旅 中国议题暗中浮现](/articles/voa/1012921.md)
 
