--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+9-14 [【404文库】“时代在召唤中国的马丁路德金。今天的社会需要不同阶层的沟通谈判机制！”（外二篇）](/articles/cdt/337142.md)
+
 9-13 [看客inSight｜农村女性的墓碑上，没有自己的姓名](/articles/cdt/337148.md)
 
 9-13 [孙立平｜过剩产能出清之日，就是真正拐点到来之时](/articles/cdt/337153.md)
@@ -598,6 +600,4 @@
 8-9 [建设性意见｜连骨灰都是假的！！！每一天都在刷新对底线的认知](/articles/cdt/338172.md)
 
 8-8 [【404文库】澎湃新闻｜盗窃倒卖数千具尸体制作植入材料、75人涉案，地方民政部门回应](/articles/cdt/338176.md)
-
-8-8 [【旧文重温】记者刘向南｜我在两广采访“殡葬官员组织倒卖尸体案”](/articles/cdt/338178.md)
 
