--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+9-14 [中国宣布提高法定退休年龄](/articles/nyt/1042382.md)
+
 9-13 [泰勒·斯威夫特支持贺锦丽，“顶流”明星能否左右选情](/articles/nyt/1042383.md)
 
 9-13 [报告称WADA未“偏袒”中国，但指中国反兴奋剂机构违规](/articles/nyt/1042384.md)
@@ -598,6 +600,4 @@
 6-13 [中国，全球最大的无人驾驶试验场](/articles/nyt/1042680.md)
 
 6-13 [美国宣布新金融制裁措施，旨在切断中俄技术联系](/articles/nyt/1042681.md)
-
-6-13 [欧盟宣布对中国电动汽车征收额外关税，最高达38%](/articles/nyt/1042682.md)
 
