--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-14 [美中在非洲加大争夺军事影响力](/articles/voa/1012598.md)
+
+9-14 [中俄宣传媒体如何报道或忽略美国大选各个方面](/articles/voa/1012599.md)
+
 9-14 [美国防部依“总统提取权”运抵台湾装备受损发霉和过期，五角大楼监察报告指未有效落实问责管理并将有负面后果](/articles/voa/1012600.md)
 
 9-14 [五角大楼考虑在日本部署中程导弹 美议员表支持](/articles/voa/1012601.md)
@@ -596,8 +600,4 @@
 9-3 [中国经历最热7月后，大片地区再遭最热8月](/articles/voa/1012896.md)
 
 9-2 [赖清德：中国“吞台”若真为领土完整，就应该去收复被俄罗斯占据的大清领土](/articles/voa/1012897.md)
-
-9-2 [香港47人案最后一批定罪被告进入减刑答辩：有人拒绝“求情” 有人强调深信民主](/articles/voa/1012898.md)
-
-9-2 [北京要非洲多买中国货，南非却希望减少与北京贸易逆差](/articles/voa/1012899.md)
 
